--- a/res/values-lo/strings.xml
+++ b/res/values-lo/strings.xml
@@ -70,10 +70,8 @@
     <string name="bluetooth_disconnect_all_profiles" product="device" msgid="6944790936166852428">"ອຸປະກອນຂອງທ່ານຈະຕັດການເຊື່ອມຕໍ່ຈາກ <xliff:g id="DEVICE_NAME">%1$s</xliff:g>."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"ຈັບຄູ່ອຸປະກອນໃໝ່"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"Bluetooth"</string>
-    <!-- no translation found for bluetooth_pair_right_ear_button (3979894494803078852) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_left_ear_button (1019938875726073791) -->
-    <skip />
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"ຈັບຄູ່ຫູຂວາ"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"ຈັບຄູ່ຫູຊ້າຍ"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"ຈັບຄູ່ຫູອີກຂ້າງຂອງທ່ານ"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"ເຊື່ອມຕໍ່ເຄື່ອງຊ່ວຍຟັງຊ້າຍຂອງທ່ານແລ້ວ.\n\nເພື່ອເຊື່ອມຕໍ່ອັນຂວາ, ໃຫ້ກວດສອບວ່າມັນເປີດໃຊ້ ແລະ ພ້ອມຈັບຄູ່ແລ້ວ."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"ເຊື່ອມຕໍ່ເຄື່ອງຊ່ວຍຟັງຂວາຂອງທ່ານແລ້ວ.\n\nເພື່ອເຊື່ອມຕໍ່ອັນຊ້າຍ, ໃຫ້ກວດສອບວ່າມັນເປີດໃຊ້ ແລະ ພ້ອມຈັບຄູ່ແລ້ວ."</string>
@@ -1447,8 +1445,7 @@
     <string name="sim_enter_new" msgid="9010947802784561582">"ລະຫັດ PIN ໃໝ່ຂອງ SIM"</string>
     <string name="sim_reenter_new" msgid="6131418271490374263">"ພິມ PIN ໃໝ່​ອີກ​ເທື່ອ​ນຶ່ງ"</string>
     <string name="sim_change_pin" msgid="1104103818545005448">"SIM PIN"</string>
-    <!-- no translation found for sim_invalid_pin_hint (3376397829969578877) -->
-    <skip />
+    <string name="sim_invalid_pin_hint" msgid="3376397829969578877">"ພິມລະຫັດ PIN ທີ່ມີ 4 ຫາ 8 ຕົວເລກ"</string>
     <string name="sim_pins_dont_match" msgid="1540348773896609260">"ລະຫັດ PIN ບໍ່ກົງກັນ"</string>
     <string name="sim_change_failed" msgid="316723087029061740">"ບໍ່ສາມາດປ່ຽນລະຫັດ PIN ໄດ້.\nອາດເປັນເພາະລະຫັດ PIN ບໍ່ຖືກຕ້ອງ."</string>
     <string name="sim_change_succeeded" msgid="3516905528149069739">"ລະຫັດ PIN ຂອງ SIM ຖືກປ່ຽນສຳເລັດແລ້ວ"</string>
@@ -2064,7 +2061,6 @@
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"ຣີເຊັດການຕັ້ງຄ່າຕ່າງໆຂອງແອັບບໍ?"</string>
     <string name="reset_app_preferences_desc" msgid="8550782670650158299">"ຂັ້ນຕອນນີ້ຈະຣີເຊັດການຕັ້ງຄ່າທັງໝົດຂອງ:\n\n"<li>"ແອັບທີ່ປິດການນຳໃຊ້"</li>\n<li>"ການແຈ້ງເຕືອນແອັບທີ່ປິດການນຳໃຊ້"</li>\n<li>"ແອັບພລິເຄຊັນເລີ່ມຕົ້ນສຳລັບຄຳສັ່ງຕ່າງໆ"</li>\n<li>"ການຈຳກັດຂໍ້ມູນໃນພື້ນຫຼັງສຳລັບແອັບຕ່າງໆ"</li>\n<li>"ການຈຳກັດການອະນຸຍາດໃກໍຕາມ"</li>\n<li>"ການຕັ້ງຄ່າການນຳໃຊ້ແບັດເຕີຣີ"</li>\n\n"ທ່ານຈະບໍ່ສູນເສຍຂໍ້ມູນແອັບໃດກໍຕາມ."</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"ຣີເຊັດແອັບ"</string>
-    <string name="manage_space_text" msgid="9013414693633572277">"ຈັດການພື້ນທີ່"</string>
     <string name="filter" msgid="9039576690686251462">"ໂຕກັ່ນຕອງ"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"ເລືອກໂຕເລືອກການກັ່ນຕອງ"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"ແອັບທັງໝົດ"</string>
@@ -2681,7 +2677,7 @@
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"ການໃຊ້ແບັດເຕີຣີ"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"ເບິ່ງການນຳໃຊ້ໃນຮອບ 24 ຊົ່ວໂມງທີ່ຜ່ານມາ"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"ເບິ່ງການນຳໃຊ້ນັບຈາກການສາກເຕັມຫຼ້າສຸດ"</string>
-    <string name="battery_details_title" msgid="4531369291819754178">"ການໃຊ້ແບັດເຕີຣີ"</string>
+    <string name="battery_details_title" msgid="3289680399291090588">"ການໃຊ້ແບັດເຕີຣີຂອງແອັບ"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"ໃຊ້ລາຍລະອຽດ"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"ປັບແຕ່ງການໃຊ້ພະລັງງານ"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"ແພັກເກດທີ່ຮວມມານຳ"</string>
@@ -2700,8 +2696,10 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"ບາງຄຸນສົມບັດອາດຖືກຈຳກັດໄວ້"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"ການໃຊ້ແບັດເຕີຣີສູງຂຶ້ນ"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"ເບິ່ງແອັບທີ່ມີການໃຊ້ສູງສຸດ"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"ຈຳກັດການສາກໄຟຊົ່ວຄາວ"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"ເພື່ອຖະໜອມແບັດເຕີຣີຂອງທ່ານ. ສຶກສາເພີ່ມເຕີມ."</string>
+    <string name="battery_tip_limited_temporarily_title" msgid="5962767837251276527">"ການສາກໄຟຖືກຢຸດໄວ້ຊົ່ວຄາວ"</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="4236185146380247801">"ການປົກປ້ອງແບັດເຕີຣີເພື່ອຢືດອາຍຸຂອງແບັດເຕີຣີອອກໄປ \nແຕະເພື່ອສຶກສາເພີ່ມເຕີມ"</string>
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"ສືບຕໍ່ການສາກໄຟ"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"ໃນບາງສະພາບເງື່ອນໄຂ ເຊັ່ນ: ອຸນຫະພູມສູງ ແລະ ໄລຍະເວລາການສາກໄຟດົນ, ການສາກໄຟອາດຖືກຈຳກັດເປັນ <xliff:g id="PERCENT">%1$s</xliff:g> ເພື່ອຊ່ວຍຖະໜອມອາຍຸແບັດເຕີຣີ.\n\nເມື່ອສະພາບເງື່ອນໄຂເຫຼົ່ານັ້ນສິ້ນສຸດລົງ, ໂທລະສັບຂອງທ່ານຈະສາກໄຟປົກກະຕິໂດຍອັດຕະໂນມັດ."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"ໃນບາງສະພາບເງື່ອນໄຂ ເຊັ່ນ: ອຸນຫະພູມສູງ ແລະ ໄລຍະເວລາການສາກໄຟດົນ, ການສາກໄຟອາດຖືກຈຳກັດເປັນ <xliff:g id="PERCENT">%1$s</xliff:g> ເພື່ອຊ່ວຍຖະໜອມອາຍຸແບັດເຕີຣີ.\n\nເມື່ອສະພາບເງື່ອນໄຂເຫຼົ່ານັ້ນສິ້ນສຸດລົງ, ແທັບເລັດຂອງທ່ານຈະສາກໄຟປົກກະຕິໂດຍອັດຕະໂນມັດ."</string>
@@ -2737,6 +2735,7 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"ແອັບນີ້ຈະສາມາດໃຊ້ແບັດເຕີຣີໃນພື້ນຫຼັງ. ແບັດເຕີຣີຂອງທ່ານອາດໝົດໄວກວ່າທີ່ຄາດໄວ້."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"ລຶບ"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"ຍົກເລີກ"</string>
+    <string name="battery_tip_charge_to_full_button" msgid="6701709034348116261">"ສາກໄຟຈົນເຕັມ"</string>
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"ແອັບຂອງທ່ານກຳລັງໃຊ້ແບັດເຕີຣີໃນປະລິມານປົກກະຕິ. ຫາກແອັບຕ່າງໆໃຊ້ແບັດເຕີຣີຫຼາຍເກີນໄປ, ໂທລະສັບຂອງທ່ານຈະແນະນຳຄຳສັ່ງທີ່ທ່ານສາມາດໃຊ້ໄດ້.\n\nທ່ານສາມາດເປີດໃຊ້ຕົວປະຢັດແບັດເຕີຣີໄດ້ຕະຫຼອດເວລາຫາກແບັດເຕີຣີຂອງທ່ານເຫຼືອໜ້ອຍ."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"ແອັບຂອງທ່ານກຳລັງໃຊ້ແບັດເຕີຣີໃນປະລິມານປົກກະຕິ. ຫາກແອັບຕ່າງໆໃຊ້ແບັດເຕີຣີຫຼາຍເກີນໄປ, ແທັບເລັດຂອງທ່ານຈະແນະນຳຄຳສັ່ງທີ່ທ່ານສາມາດໃຊ້ໄດ້.\n\nທ່ານສາມາດເປີດໃຊ້ຕົວປະຢັດແບັດເຕີຣີໄດ້ຕະຫຼອດເວລາຫາກແບັດເຕີຣີຂອງທ່ານເຫຼືອໜ້ອຍ."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"ແອັບຂອງທ່ານກຳລັງໃຊ້ແບັດເຕີຣີໃນປະລິມານປົກກະຕິ. ຫາກແອັບຕ່າງໆໃຊ້ແບັດເຕີຣີຫຼາຍເກີນໄປ, ອຸປະກອນຂອງທ່ານຈະແນະນຳຄຳສັ່ງທີ່ທ່ານສາມາດໃຊ້ໄດ້.\n\nທ່ານສາມາດເປີດໃຊ້ຕົວປະຢັດແບັດເຕີຣີໄດ້ຕະຫຼອດເວລາຫາກແບັດເຕີຣີຂອງທ່ານເຫຼືອໜ້ອຍ."</string>
@@ -2781,7 +2780,6 @@
     <string name="battery_full_charge_last" msgid="465146408601016923">"ສາກເຕັມຈະຢູ່ໄດ້ປະມານ"</string>
     <string name="battery_footer_summary" msgid="8221691063048377342">"ຂໍ້ມູນການນຳໃຊ້ແບັດເຕີຣີເປັນການປະມານການເທົ່ານັ້ນ ແລະ ສາມາດປ່ຽນແປງໄດ້ຂຶ້ນກັບການນຳໃຊ້ຕົວຈິງ."</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"ການໃຊ້ແບັດເຕີຣີ"</string>
-    <string name="battery_detail_manage_title" msgid="7910805419446927887">"ຈັດການການນຳໃຊ້ແບັດເຕີຣີ"</string>
     <string name="battery_total_and_bg_usage" msgid="8266478675516886819">"ຮວມ <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> ພື້ນຫຼັງ\nຫຼັງຈາກສາກເຕັມຫຼ້າສຸດ"</string>
     <string name="battery_total_and_bg_usage_24hr" msgid="2393832614028187281">"ຮວມ <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> ພື້ນຫຼັງ\nໃນຮອບ 24 ຊມ ທີ່ຜ່ານມາ"</string>
     <string name="battery_total_and_bg_usage_with_period" msgid="2809037516933951047">"ຮວມ <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> ພື້ນຫຼັງ\nສຳລັບ <xliff:g id="TIME_PERIOD">^3</xliff:g>"</string>
@@ -2835,14 +2833,11 @@
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"at <xliff:g id="PERCENT">%1$s</xliff:g>battery"</string>
     <string name="battery_percentage" msgid="1779934245963043490">"ເປີເຊັນແບັດເຕີຣີ"</string>
     <string name="battery_percentage_description" msgid="2321465139126125541">"ສະແດງເປີເຊັນແບັດເຕີຣີໃນແຖບສະຖານະ"</string>
-    <!-- no translation found for battery_usage_chart_graph_hint_last_full_charge (6570336408060566877) -->
-    <skip />
+    <string name="battery_usage_chart_graph_hint_last_full_charge" msgid="6570336408060566877">"ລະດັບແບັດເຕີຣີຫຼັງຈາກສາກເຕັມຫຼ້າສຸດ"</string>
     <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"ລະດັບແບັດເຕີຣີສຳລັບ 24 ຊມ ທີ່ຜ່ານມາ"</string>
-    <!-- no translation found for battery_app_usage (8976453608783133770) -->
-    <skip />
+    <string name="battery_app_usage" msgid="8976453608783133770">"ການນຳໃຊ້ແອັບນັບຕັ້ງແຕ່ສາກເຕັມຫຼ້າສຸດ"</string>
     <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"ການໃຊ້ແອັບສຳລັບ 24 ຊມ ທີ່ຜ່ານມາ"</string>
-    <!-- no translation found for battery_system_usage (1395943945140097585) -->
-    <skip />
+    <string name="battery_system_usage" msgid="1395943945140097585">"ການນຳໃຊ້ລະບົບຫຼັງຈາກສາກເຕັມຫຼ້າສຸດ"</string>
     <string name="battery_system_usage_for_past_24" msgid="3341520273114616263">"ການໃຊ້ລະບົບສຳລັບ 24 ຊມ ທີ່ຜ່ານມາ"</string>
     <string name="battery_system_usage_for" msgid="3248552137819897140">"ການໃຊ້ລະບົບສຳລັບ <xliff:g id="SLOT">%s</xliff:g>"</string>
     <string name="battery_app_usage_for" msgid="7309909074935858949">"ການໃຊ້ແອັບສຳລັບ <xliff:g id="SLOT">%s</xliff:g>"</string>
@@ -2853,6 +2848,8 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"ຂໍ້ມູນການໃຊ້ແບັດເຕີຣີເປັນການປະມານການເທົ່ານັ້ນ ແລະ ບໍ່ໄດ້ວັດແທກການນຳໃຊ້ໃນເວລາທີ່ກຳລັງສາກໄຟໂທລະສັບ"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"ຂໍ້ມູນການໃຊ້ແບັດເຕີຣີຈະສາມາດເບິ່ງໄດ້ຫຼັງຈາກທີ່ທ່ານໃຊ້ໂທລະສັບຂອງທ່ານໄປສອງສາມຊົ່ວໂມງ"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"ແຜນພາບການໃຊ້ແບັດເຕີຣີ"</string>
+    <string name="daily_battery_usage_chart" msgid="4176059567682992686">"ແຜນພາບການໃຊ້ແບັດເຕີຣີລາຍວັນ"</string>
+    <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"ແຜນພາບການໃຊ້ແບັດເຕີຣີລາຍຊົ່ວໂມງ"</string>
     <string name="process_stats_summary_title" msgid="502683176231281732">"ສະຖິຕິໂປຣເຊສ"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"ສະຖານະ Geeky ກ່ຽວກັບໂປຣເຊສທີ່ກຳລັງເຮັດວຽກຢູ່"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"ໜ່ວຍຄວາມຈຳທີ່ໃຊ້"</string>
@@ -4677,16 +4674,11 @@
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"ເປີດດຽວນີ້"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"ປິດດຽວນີ້"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"ບໍ່ໃຊ້ການປັບແຕ່ງແບັດເຕີຣີ"</string>
-    <!-- no translation found for app_battery_optimization_title (389653121998016466) -->
-    <skip />
-    <!-- no translation found for app_battery_optimization_summary (7864783556193427398) -->
-    <skip />
-    <!-- no translation found for filter_battery_unrestricted_title (821027369424198223) -->
-    <skip />
-    <!-- no translation found for filter_battery_optimized_title (8236647176487754796) -->
-    <skip />
-    <!-- no translation found for filter_battery_restricted_title (5886859505802563232) -->
-    <skip />
+    <string name="app_battery_usage_title" msgid="346558380609793334">"ການໃຊ້ແບັດເຕີຣີຂອງແອັບ"</string>
+    <string name="app_battery_usage_summary" msgid="6349965904306339539">"ຕັ້ງຄ່າການໃຊ້ແບັດເຕີຣີສຳລັບແອັບ"</string>
+    <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"ບໍ່ຈຳກັດ"</string>
+    <string name="filter_battery_optimized_title" msgid="8236647176487754796">"ປັບໃຫ້ເໝາະສົມ"</string>
+    <string name="filter_battery_restricted_title" msgid="5886859505802563232">"ມີການຈຳກັດ"</string>
     <string name="lockscreen_remote_input" msgid="6030274311185811503">"ຫາກອຸປະກອນຖືກລັອກໄວ້, ຈະມີການປ້ອງກັນບໍ່ໃຫ້ພິມຕອບກັບ ຫຼື ຂໍ້ຄວາມອື່ນໆໃນການແຈ້ງເຕືອນ"</string>
     <string name="default_spell_checker" msgid="7108373288347014351">"ຕົວກວດການສະກົດຄຳເລີ່ມຕົ້ນ"</string>
     <string name="choose_spell_checker" msgid="7402513404783243675">"ເລືອກຕົວກວດການສະກົດຄຳ"</string>
@@ -5420,6 +5412,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"ມີເດຍ"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"ປັກໝຸດເຄື່ອງຫຼິ້ນມີເດຍ"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"ເພື່ອສືບຕໍ່ການຫຼິ້ນແບບໄວໆ, ເຄື່ອງຫຼິ້ນມີເດຍຈະເປີດປະໄວ້ໃນການຕັ້ງຄ່າດ່ວນ"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"ສະແດງການແນະນຳມີເດຍ"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"ອ້າງອີງຈາກການເຄື່ອນໄຫວຂອງທ່ານ"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"ເຊື່ອງຕົວຫຼິ້ນ"</string>
