--- a/res/values-ms/strings.xml
+++ b/res/values-ms/strings.xml
@@ -70,10 +70,8 @@
     <string name="bluetooth_disconnect_all_profiles" product="device" msgid="6944790936166852428">"Peranti anda akan diputuskan sambungan daripada <xliff:g id="DEVICE_NAME">%1$s</xliff:g>."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Gandingkan peranti baharu"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
-    <!-- no translation found for bluetooth_pair_right_ear_button (3979894494803078852) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_left_ear_button (1019938875726073791) -->
-    <skip />
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Gandingkan telinga kanan"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Gandingkan telinga kiri"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Gandingkan telinga lagi satu"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"Alat bantu pendengaran kiri anda disambungkan.\n\nUntuk menggandingkan alat bantu pendengaran kanan, pastikan alat dihidupkan dan sedia untuk digandingkan."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"Alat bantu pendengaran kanan anda disambungkan.\n\nUntuk menggandingkan alat bantu pendengaran kiri, pastikan alat dihidupkan dan sedia untuk digandingkan."</string>
@@ -1584,7 +1582,7 @@
     <string name="storage_menu_manage" msgid="7465522758801346408">"Urus storan"</string>
     <string name="keywords_storage_menu_free" msgid="2275406357317597106">"bersih, storan"</string>
     <string name="storage_free_up_space_title" msgid="281047807372131975">"Kosongkan ruang"</string>
-    <string name="storage_free_up_space_summary" msgid="6650027929735481350">"Pergi ke apl Fail untuk mengurus dan mengosongkan ruang"</string>
+    <string name="storage_free_up_space_summary" msgid="6650027929735481350">"Pergi ke apl Files untuk mengurus dan mengosongkan ruang"</string>
     <string name="storage_title_usb" msgid="1332488715547400452">"Sambungan komputer USB"</string>
     <string name="usb_connection_category" msgid="2288543238378907242">"Sambung sebagai"</string>
     <string name="usb_mtp_title" msgid="9068009584556422314">"Peranti media (MTP)"</string>
@@ -2063,7 +2061,6 @@
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"Tetapkan semula pilihan apl?"</string>
     <string name="reset_app_preferences_desc" msgid="8550782670650158299">"Tindakan ini akan menetapkan semula semua pilihan untuk:\n\n"<li>"Apl yang dilumpuhkan"</li>\n<li>"Pemberitahuan untuk apl yang dilumpuhkan"</li>\n<li>"Aplikasi lalai untuk tindakan"</li>\n<li>"Sekatan data latar belakang untuk apl"</li>\n<li>"Mana-mana sekatan kebenaran"</li>\n<li>"Tetapan penggunaan bateri"</li>\n\n"Anda tidak akan kehilangan apa-apa data apl."</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"Tetapkan semula apl"</string>
-    <string name="manage_space_text" msgid="9013414693633572277">"Urus ruang"</string>
     <string name="filter" msgid="9039576690686251462">"Tapis"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"Buat pilihan penapis"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"Semua apl"</string>
@@ -2275,7 +2272,7 @@
     <string name="select_to_speak_summary" msgid="1995285446766920925">"Ketik item pada skrin anda untuk mendengar item itu dibaca"</string>
     <string name="accessibility_captioning_title" msgid="4561871958958925225">"Pilihan sari kata"</string>
     <string name="accessibility_captioning_about_title" msgid="3542171637334191563">"Perihal pilihan kapsyen"</string>
-    <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Ketahui lebih lanjut tentang pilihan kapsyen"</string>
+    <string name="accessibility_captioning_footer_learn_more_content_description" msgid="5730040700677017706">"Ketahui lebih lanjut tentang pilihan sari kata"</string>
     <string name="accessibility_screen_magnification_title" msgid="1211169976144629087">"Pembesaran"</string>
     <string name="accessibility_screen_magnification_shortcut_title" msgid="2387963646377987780">"Pintasan pembesaran"</string>
     <string name="accessibility_screen_magnification_follow_typing_title" msgid="6379517513916651560">"Besarkan taipan"</string>
@@ -2559,7 +2556,7 @@
     <string name="captioning_edge_color" msgid="6035818279902597518">"Warna sisi"</string>
     <string name="captioning_edge_type" msgid="5281259280060811506">"Jenis sisi"</string>
     <string name="captioning_typeface" msgid="285325623518361407">"Keluarga fon"</string>
-    <string name="captioning_preview_text" msgid="4973475065545995704">"Kapsyen akan kelihatan seperti ini"</string>
+    <string name="captioning_preview_text" msgid="4973475065545995704">"Sari kata akan kelihatan seperti ini"</string>
     <string name="captioning_preview_characters" msgid="7854812443613580460">"Aa"</string>
     <string name="locale_default" msgid="8948077172250925164">"Lalai"</string>
     <string name="color_title" msgid="2511586788643787427">"Warna"</string>
@@ -2680,7 +2677,7 @@
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"Penggunaan bateri"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"Lihat penggunaan untuk 24 jam yang lalu"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"Lihat penggunaan dari cas penuh terakhir"</string>
-    <string name="battery_details_title" msgid="4531369291819754178">"Penggunaan bateri"</string>
+    <string name="battery_details_title" msgid="3289680399291090588">"Penggunaan bateri apl"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"Butiran penggunaan"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"Laraskan penggunaan kuasa"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"Pakej yang disertakan"</string>
@@ -2699,8 +2696,10 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Sesetengah ciri mungkin terhad"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Penggunaan bateri tertinggi"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Lihat apl dengan penggunaan tertinggi"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Pengecasan terhad sementara"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Untuk menjimatkan bateri anda. Ketahui lebih lanjut."</string>
+    <string name="battery_tip_limited_temporarily_title" msgid="5962767837251276527">"Pengecasan dijeda"</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="4236185146380247801">"Melindungi bateri untuk melanjutkan jangka hayat bateri\nKetik untuk mengetahui lebih lanjut"</string>
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Sambung semula pengecasan"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Dalam keadaan tertentu, seperti suhu tinggi dan tempoh pengecasan yang panjang, pengecasan mungkin dihadkan kepada <xliff:g id="PERCENT">%1$s</xliff:g> untuk membantu anda mengekalkan kesihatan bateri.\n\nApabila keadaan tersebut berakhir, telefon anda akan dicas secara automatik seperti biasa."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Dalam keadaan tertentu, seperti suhu tinggi dan tempoh pengecasan yang panjang, pengecasan mungkin dihadkan kepada <xliff:g id="PERCENT">%1$s</xliff:g> untuk membantu anda mengekalkan kesihatan bateri.\n\nApabila keadaan tersebut berakhir, tablet anda akan dicas secara automatik seperti biasa."</string>
@@ -2736,6 +2735,7 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Apl ini dapat menggunakan bateri di latar belakang. Bateri anda mungkin kehabisan lebih cepat daripada yang dijangkakan."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Alih keluar"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Batal"</string>
+    <string name="battery_tip_charge_to_full_button" msgid="6701709034348116261">"Cas hingga penuh"</string>
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Apl anda menggunakan jumlah kuasa bateri seperti biasa. Jika apl menggunakan terlalu banyak kuasa bateri, telefon anda akan mencadangkan tindakan yang boleh anda ambil.\n\nAnda boleh menghidupkan Penjimat Bateri pada sepanjang masa jika anda hampir kehabisan kuasa bateri."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Apl anda menggunakan jumlah kuasa bateri seperti biasa. Jika apl menggunakan terlalu banyak kuasa bateri, tablet anda akan mencadangkan tindakan yang boleh anda ambil.\n\nAnda boleh menghidupkan Penjimat Bateri pada sepanjang masa jika anda hampir kehabisan kuasa bateri."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Apl anda menggunakan jumlah kuasa bateri seperti biasa. Jika apl menggunakan terlalu banyak kuasa bateri, peranti anda akan mencadangkan tindakan yang boleh anda ambil.\n\nAnda boleh menghidupkan Penjimat Bateri pada sepanjang masa jika anda hampir kehabisan kuasa bateri."</string>
@@ -2780,7 +2780,6 @@
     <string name="battery_full_charge_last" msgid="465146408601016923">"Cas penuh boleh digunakan selama kira-kira"</string>
     <string name="battery_footer_summary" msgid="8221691063048377342">"Data penggunaan bateri ialah anggaran dan boleh berubah berdasarkan penggunaan."</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"Penggunaan bateri"</string>
-    <string name="battery_detail_manage_title" msgid="7910805419446927887">"Urus penggunaan bateri"</string>
     <string name="battery_total_and_bg_usage" msgid="8266478675516886819">"Sejumlah <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> latar\nsejak cas penuh terakhir"</string>
     <string name="battery_total_and_bg_usage_24hr" msgid="2393832614028187281">"Sejumlah <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> latar\nuntuk 24 jam yang lalu"</string>
     <string name="battery_total_and_bg_usage_with_period" msgid="2809037516933951047">"Sejumlah <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> latar\nuntuk <xliff:g id="TIME_PERIOD">^3</xliff:g>"</string>
@@ -2849,6 +2848,8 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Data penggunaan bateri ialah anggaran dan tidak mengukur penggunaan semasa telefon dicas"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Data penggunaan bateri akan tersedia selepas anda menggunakan telefon anda selama beberapa jam."</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Carta penggunaan bateri"</string>
+    <string name="daily_battery_usage_chart" msgid="4176059567682992686">"Carta penggunaan bateri harian"</string>
+    <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"Carta penggunaan bateri setiap jam"</string>
     <string name="process_stats_summary_title" msgid="502683176231281732">"Statistik Proses"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Statistik skema tentang proses yang sedang berjalan"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Penggunaan memori"</string>
@@ -4673,8 +4674,8 @@
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"Hidupkan sekarang"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"Matikan sekarang"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"Tidak menggunakan pengoptimuman bateri"</string>
-    <string name="app_battery_optimization_title" msgid="389653121998016466">"Urus penggunaan bateri"</string>
-    <string name="app_battery_optimization_summary" msgid="7864783556193427398">"Tetapkan penggunaan bateri untuk apl"</string>
+    <string name="app_battery_usage_title" msgid="346558380609793334">"Penggunaan bateri apl"</string>
+    <string name="app_battery_usage_summary" msgid="6349965904306339539">"Tetapkan penggunaan bateri untuk apl"</string>
     <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"Tiada sekatan"</string>
     <string name="filter_battery_optimized_title" msgid="8236647176487754796">"Dioptimumkan"</string>
     <string name="filter_battery_restricted_title" msgid="5886859505802563232">"Terhad"</string>
@@ -5411,6 +5412,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"Media"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Sematkan pemain media"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Untuk menyambung semula main balik dengan pantas, biarkan pemain media kekal terbuka dalam Tetapan Pantas"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Tunjukkan pengesyoran media"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Berdasarkan aktiviti anda"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Sembunyikan pemain"</string>
