--- a/res/values-si/strings.xml
+++ b/res/values-si/strings.xml
@@ -70,10 +70,8 @@
     <string name="bluetooth_disconnect_all_profiles" product="device" msgid="6944790936166852428">"ඔබේ උපාංගය <xliff:g id="DEVICE_NAME">%1$s</xliff:g> වෙතින් විසන්ධි කරනු ඇත."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"නව උපාංගය යුගල කරන්න"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"බ්ලූටූත්"</string>
-    <!-- no translation found for bluetooth_pair_right_ear_button (3979894494803078852) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_left_ear_button (1019938875726073791) -->
-    <skip />
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"දකුණු කණ යුගල කරන්න"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"වම් කණ යුගල කරන්න"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"ඔබගේ අනෙක් කණ යුගල කරන්න"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"ඔබගේ වම් ශ්‍රවණාධාරකය සම්බන්ධ කර ඇත.\n\nදකුණු එක යුගල කිරීමට, එය ක්‍රියාත්මක කර යුගල කිරීමට සූදානම් බව සහතික කර ගන්න."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"ඔබගේ දකුණු ශ්‍රවණාධාරකය සම්බන්ධ කර ඇත.\n\nවම් එක යුගල කිරීමට, එය ක්‍රියාත්මක කර යුගල කිරීමට සූදානම් බව සහතික කර ගන්න."</string>
@@ -2063,7 +2061,6 @@
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"යෙදුම් මනාප නැවත සකසන්නද?"</string>
     <string name="reset_app_preferences_desc" msgid="8550782670650158299">"මෙය මේ සඳහා සියලු මනාප යළි සකසනු ඇත:\n\n"<li>"අබලිත යෙදුම්"</li>\n<li>"අබලිත යෙදුම් දැනුම්දීම්"</li>\n<li>"ක්‍රියා සඳහා පෙරනිමි යෙදුම්"</li>\n<li>"යෙදුම් සඳහා පසුබිම් දත්ත සීමා කිරීම්"</li>\n<li>"ඕනෑම අවසර සීමා"</li>\n<li>"බැටරි භාවිත සැකසීම්"</li>\n\n"ඔබට යෙදුම් දත්ත කිසිවක් අහිමි නොවනු ඇත."</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"යෙදුම් මනාප නැවත සකසන්න"</string>
-    <string name="manage_space_text" msgid="9013414693633572277">"ඉඩ කළමනාකරණය"</string>
     <string name="filter" msgid="9039576690686251462">"පෙරහන කරන්න"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"පෙරහන් විකල්ප තෝරන්න"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"සියලු යෙදුම්"</string>
@@ -2680,7 +2677,8 @@
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"බැටරි භාවිතය"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"පසුගිය පැය 24 සඳහා භාවිතය බලන්න"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"අවසන් පූර්ණ ආරෝපණයේ සිට භාවිතය බලන්න"</string>
-    <string name="battery_details_title" msgid="4531369291819754178">"බැටරි භාවිතය"</string>
+    <!-- no translation found for battery_details_title (3289680399291090588) -->
+    <skip />
     <string name="details_subtitle" msgid="2550872569652785527">"විස්තර භාවිත කරන්න"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"බල භාවිතය සීරුමාරු කරන්න"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"ඇතුළත් පැකේජ"</string>
@@ -2699,8 +2697,12 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"සමහර විශේෂාංග සීමිත විය හැකිය"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"වඩා වැඩි බැටරි භාවිතය"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"ඉහළම භාවිතය සහිත යෙදුම් බලන්න"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"ආරෝපණය කිරීම තාවකාලිකව සීමා කර ඇත"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"ඔබගේ බැටය ආරක්ෂා කර ගැනීමට. තව දැන ගන්න."</string>
+    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"ආරෝපණය යළි ආරම්භ කරන්න"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"ඉහළ උෂ්ණත්ව සහ දිගු ආරෝපණ කාල සීමා වැනි, යම් තත්ත්වවලදී, බැටරි සෞඛ්‍යය රැක ගැනීමට උදව් වීමට අරෝපණය <xliff:g id="PERCENT">%1$s</xliff:g>ට සීමා විය හැකිය.\n\nඑම තත්ත්ව අවසන් වූ විට, ඔබගේ දුරකථනය සාමාන්‍ය ලෙස ආරෝපණය වනු ඇත."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"ඉහළ උෂ්ණත්ව සහ දිගු ආරෝපණ කාල සීමා වැනි, යම් තත්ත්වවලදී, බැටරි සෞඛ්‍යය රැක ගැනීමට උදව් වීමට අරෝපණය <xliff:g id="PERCENT">%1$s</xliff:g>ට සීමා විය හැකිය.\n\nඑම තත්ත්ව අවසන් වූ විට, ඔබගේ ටැබ්ලටය සාමාන්‍ය ලෙස ආරෝපණය වනු ඇත."</string>
@@ -2736,6 +2738,8 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"මෙම යෙදුමට පසුබිමින් බැටරිය භාවිත කිරීමට හැකි වනු ඇත. ඔබේ බැටරිය බලාපොරොත්තු වනවාට වඩා ඉක්මනින් අවසන් විය හැකිය."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"ඉවත් කරන්න"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"අවලංගු කරන්න"</string>
+    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
+    <skip />
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"ඔබගේ යෙදුම් බැටරිය සාමාන්‍ය ප්‍රමාණයක් භාවිතා කරයි. යෙදුම් බැටරිය ඉතා වැඩියෙන් භාවිතා කරන්නේ නම්, ඔබේ දුරකථනය ඔබට ගත හැකි පියවර යෝජනා කරනු ඇත.\n\nඔබට බැටරිය අඩු වන සෑම විටම බැටරි සුරැකුම ක්‍රියාත්මක කළ හැකිය."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"ඔබගේ යෙදුම් බැටරිය සාමාන්‍ය ප්‍රමාණයක් භාවිතා කරයි. යෙදුම් බැටරිය ඉතා වැඩියෙන් භාවිතා කරන්නේ නම්, ඔබේ ටැබ්ලට් උපාංගය ඔබට ගත හැකි පියවර යෝජනා කරනු ඇත.\n\nඔබට බැටරිය අඩු වන සෑම විටම බැටරි සුරැකුම ක්‍රියාත්මක කළ හැකිය."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"ඔබගේ යෙදුම් බැටරිය සාමාන්‍ය ප්‍රමාණයක් භාවිතා කරයි. යෙදුම් බැටරිය ඉතා වැඩියෙන් භාවිතා කරන්නේ නම්, ඔබේ උපාංගය ඔබට ගත හැකි පියවර යෝජනා කරනු ඇත.\n\nඔබට බැටරිය අඩු වන සෑම විටම බැටරි සුරැකුම ක්‍රියාත්මක කළ හැකිය."</string>
@@ -2780,7 +2784,6 @@
     <string name="battery_full_charge_last" msgid="465146408601016923">"පූර්ණ ආරෝපණය පවතින්නේ"</string>
     <string name="battery_footer_summary" msgid="8221691063048377342">"බැටරි භාවිත දත්ත දළ අගයක් වන අතර භාවිතය අනුව වෙනස් විය හැකිය."</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"බැටරි භාවිතය"</string>
-    <string name="battery_detail_manage_title" msgid="7910805419446927887">"බැටරි භාවිතය කළමනාකරණය"</string>
     <string name="battery_total_and_bg_usage" msgid="8266478675516886819">"මුළු <xliff:g id="TIME_0">^1</xliff:g> • අවසන් පූර්ණ ආරෝපණයේ සිට\n<xliff:g id="TIME_1">^2</xliff:g>ක පසුබිම"</string>
     <string name="battery_total_and_bg_usage_24hr" msgid="2393832614028187281">"මුළු <xliff:g id="TIME_0">^1</xliff:g> • පසුගිය පැය 24 සඳහා <xliff:g id="TIME_1">^2</xliff:g>\nක පසුබිම"</string>
     <string name="battery_total_and_bg_usage_with_period" msgid="2809037516933951047">"මුළු <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_PERIOD">^3</xliff:g> සඳහා <xliff:g id="TIME_1">^2</xliff:g>\nක පසුබිම"</string>
@@ -2849,6 +2852,10 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"බැටරි භාවිත දත්ත දළ අගයක් වන අතර දුරකථනය ආරෝපණය වන විට මනින්නේ නැත"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"ඔබ පැය කිහිපයක් ඔබගේ දුරකථනය භාවිත කිරීමෙන් පසු බැටරි භාවිත දත්ත ලබා ගත හැකි වනු ඇත"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"බැටරි භාවිතය පිළිබඳ ප්‍රස්තාරය"</string>
+    <!-- no translation found for daily_battery_usage_chart (4176059567682992686) -->
+    <skip />
+    <!-- no translation found for hourly_battery_usage_chart (3098314511076561272) -->
+    <skip />
     <string name="process_stats_summary_title" msgid="502683176231281732">"ක්‍රියාවලි සංඛ්‍යා ලේඛන"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"ධාවන ක්‍රියාවලි පිළිබඳ ගීක සංඛ්‍යා ලේඛන"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"මතක භාවිතය"</string>
@@ -4673,8 +4680,10 @@
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"දැන් ක්‍රියාත්මක කරන්න"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"දැන් ක්‍රියාවිරහිත කරන්න"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"බැටරි ප්‍රශස්තකරණය භාවිත නොකිරීම"</string>
-    <string name="app_battery_optimization_title" msgid="389653121998016466">"බැටරි භාවිතය කළමනාකරණය"</string>
-    <string name="app_battery_optimization_summary" msgid="7864783556193427398">"යෙදුම් සඳහා බැටරි භාවිතය සකසන්න"</string>
+    <!-- no translation found for app_battery_usage_title (346558380609793334) -->
+    <skip />
+    <!-- no translation found for app_battery_usage_summary (6349965904306339539) -->
+    <skip />
     <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"සීමා නොකළ"</string>
     <string name="filter_battery_optimized_title" msgid="8236647176487754796">"ප්‍රශස්ත කළ"</string>
     <string name="filter_battery_restricted_title" msgid="5886859505802563232">"සීමා කළ"</string>
@@ -5411,6 +5420,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"මාධ්‍ය"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"මාධ්‍ය වාදකය අමුණන්න"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"පසුධාවනය ඉක්මනින් නැවත ධාවනය ආරම්භ කිරීමට, ඉක්මන් සැකසීම් තුළ මාධ්‍ය වාදකය විවෘතව පවතී"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"මාධ්‍ය නිර්දේශ පෙන්වන්න"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"ඔබගේ ක්‍රියාකාරකම මත පදනම්ව"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"වාදකය සඟවන්න"</string>
