--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -71,10 +71,8 @@
     <string name="bluetooth_disconnect_all_profiles" product="device" msgid="6944790936166852428">"Уређај ће прекинути везу са уређајем <xliff:g id="DEVICE_NAME">%1$s</xliff:g>."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Упари нови уређај"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
-    <!-- no translation found for bluetooth_pair_right_ear_button (3979894494803078852) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_left_ear_button (1019938875726073791) -->
-    <skip />
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Упари десно уво"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Упари лево уво"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Упарите друго уво"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"Леви слушни апарат је повезан.\n\nДа бисте упарили десни, уверите се да је укључен и спреман за упаривање."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"Десни слушни апарат је повезан.\n\nДа бисте упарили леви, уверите се да је укључен и спреман за упаривање."</string>
@@ -579,7 +577,7 @@
     <string name="fingerprint_delete_title" msgid="1469865327307917858">"Уклоните „<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>“"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Желите ли да избришете овај отисак прста?"</string>
     <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"Овим се бришу слике и модел отиска прста у вези са отиском <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> који су сачувани на уређају"</string>
-    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Нећете моћи да користите отисак прста да бисте откључавали телефон или верификовали идентитет у апликацијама."</string>
+    <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Нећете моћи да користите отисак прста да бисте откључавали телефон ни верификовали идентитет у апликацијама."</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Нећете моћи да користите отисак прста за откључавање пословног профила, овлашћивање куповина или пријављивање у пословне апликације."</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Да, уклони"</string>
     <string name="encryption_settings_title" msgid="2848716008695618360">"Шифровање"</string>
@@ -1399,7 +1397,7 @@
     <string name="dark_ui_auto_mode_title" msgid="9027528859262295099">"Распоред"</string>
     <string name="dark_ui_auto_mode_never" msgid="3980412582267787662">"Ништа"</string>
     <string name="dark_ui_auto_mode_auto" msgid="6658909029498623375">"Укључује се од сумрака до свитања"</string>
-    <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"Укључује се у жељено време"</string>
+    <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"Укључује се у прилагођено време"</string>
     <string name="dark_ui_auto_mode_custom_bedtime" msgid="8465023741946439266">"Укључује се када је време за спавање"</string>
     <string name="dark_ui_status_title" msgid="3505119141437774329">"Статус"</string>
     <string name="dark_ui_summary_off_auto_mode_never" msgid="5828281549475697398">"Никада се не укључује аутоматски"</string>
@@ -2087,7 +2085,6 @@
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"Желите да ресетујете подешавања апликације?"</string>
     <string name="reset_app_preferences_desc" msgid="8550782670650158299">"Овим ћете ресетовати сва подешавања за:\n\n"<li>"Онемогућене апликације"</li>\n<li>"Обавештења о онемогућеним апликацијама"</li>\n<li>"Подразумеване апликације за радње"</li>\n<li>"Ограничења за позадинске податке за апликације"</li>\n<li>"Сва ограничења за дозволе"</li>\n<li>"Подешавања потрошње батерије"</li>\n\n"Нећете изгубити никакве податке апликације."</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"Ресетуј апликације"</string>
-    <string name="manage_space_text" msgid="9013414693633572277">"Управљај простором"</string>
     <string name="filter" msgid="9039576690686251462">"Филтрирај"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"Избор опција филтера"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"Све апликације"</string>
@@ -2711,7 +2708,7 @@
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"Потрошња батерије"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"Погледајте коришћења у последња 24 сата"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"Коришћење од последњег потпуног пуњења"</string>
-    <string name="battery_details_title" msgid="4531369291819754178">"Потрошња батерије"</string>
+    <string name="battery_details_title" msgid="3289680399291090588">"Потрошња батерије за апликације"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"Коришћење детаља"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"Прилагођавање коришћења напајања"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"Садржани пакети"</string>
@@ -2730,8 +2727,10 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Неке функције могу да буду ограничене"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Највећа потрошња батерије"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Погледајте апликације са највећом потрошњом батерије"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Пуњење је привремено ограничено"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Да би се сачувала батерија. Сазнајте више."</string>
+    <string name="battery_tip_limited_temporarily_title" msgid="5962767837251276527">"Пуњење је заустављено"</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="4236185146380247801">"Батерија се штити да би јој се продужио век трајања\nДодирните да бисте сазнали више"</string>
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Настави са пуњењем"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"У одређеним условима, на пример, високе температуре и дуги периоди пуњења, пуњење може да буде ограничено на <xliff:g id="PERCENT">%1$s</xliff:g> ради бољег стања батерије.\n\nКада ти услови престану, телефон ће аутоматски почети нормално да се пуни."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"У одређеним условима, на пример, високе температуре и дуги периоди пуњења, пуњење може да буде ограничено на <xliff:g id="PERCENT">%1$s</xliff:g> ради бољег стања батерије.\n\nКада ти услови престану, таблет ће аутоматски почети нормално да се пуни."</string>
@@ -2772,6 +2771,7 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Ова апликација ће моћи да користи батерију у позадини. Батерија може да се испразни раније него што је очекивано."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Уклони"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Откажи"</string>
+    <string name="battery_tip_charge_to_full_button" msgid="6701709034348116261">"Пуни до краја"</string>
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Апликације користе уобичајену количину батерије. Ако апликације користе превише батерије, телефон ће вам предложити радње које можете да предузмете.\n\nУвек можете да укључите Уштеду батерије ако вам је батерија при крају."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Апликације користе уобичајену количину батерије. Ако апликације користе превише батерије, таблет ће вам предложити радње које можете да предузмете.\n\nУвек можете да укључите Уштеду батерије ако вам је батерија при крају."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Апликације користе уобичајену количину батерије. Ако апликације користе превише батерије, уређај ће вам предложити радње које можете да предузмете.\n\nУвек можете да укључите Уштеду батерије ако вам је батерија при крају."</string>
@@ -2818,7 +2818,6 @@
     <string name="battery_full_charge_last" msgid="465146408601016923">"Пуна батерија траје око"</string>
     <string name="battery_footer_summary" msgid="8221691063048377342">"Подаци о коришћењу батерије су приближни и могу да се мењају у зависности од начина коришћења."</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"Потрошња батерије"</string>
-    <string name="battery_detail_manage_title" msgid="7910805419446927887">"Управљање потрошњом батерије"</string>
     <string name="battery_total_and_bg_usage" msgid="8266478675516886819">"Укупно <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> коришћења у позадини\nод последњег потпуног пуњења"</string>
     <string name="battery_total_and_bg_usage_24hr" msgid="2393832614028187281">"Укупно <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> коришћења у позадини\nу последња 24 сата"</string>
     <string name="battery_total_and_bg_usage_with_period" msgid="2809037516933951047">"Укупно <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> коришћења у позадини\nу периоду <xliff:g id="TIME_PERIOD">^3</xliff:g>"</string>
@@ -2887,6 +2886,8 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Подаци о потрошњи батерије су приближни и не мере потрошњу када се телефон пуни"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Подаци о потрошњи батерије ће бити доступни пошто будете користили телефон неколико сати"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Графикон потрошње батерије"</string>
+    <string name="daily_battery_usage_chart" msgid="4176059567682992686">"Графикон дневне потрошње батерије"</string>
+    <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"Графикон потрошње батерије по сатима"</string>
     <string name="process_stats_summary_title" msgid="502683176231281732">"Статистика процеса"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Штреберска статистика о активним процесима"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Искоришћеност меморије"</string>
@@ -3907,14 +3908,14 @@
     <string name="notification_app_switch_label" msgid="4422902423925084193">"Сва обавештења апликације <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="default_notification_assistant" msgid="243718059890346442">"Прилагодљива обавештења"</string>
     <plurals name="notifications_sent_daily" formatted="false" msgid="1319135950258375284">
-      <item quantity="one">Отприлике <xliff:g id="NUMBER_1">%,d</xliff:g> обавештење дневно</item>
-      <item quantity="few">Отприлике <xliff:g id="NUMBER_1">%,d</xliff:g> обавештења дневно</item>
-      <item quantity="other">Отприлике <xliff:g id="NUMBER_1">%,d</xliff:g> обавештења дневно</item>
+      <item quantity="one">Око <xliff:g id="NUMBER_1">%,d</xliff:g> обавештење дневно</item>
+      <item quantity="few">Око <xliff:g id="NUMBER_1">%,d</xliff:g> обавештења дневно</item>
+      <item quantity="other">Око <xliff:g id="NUMBER_1">%,d</xliff:g> обавештења дневно</item>
     </plurals>
     <plurals name="notifications_sent_weekly" formatted="false" msgid="7604454969366376305">
-      <item quantity="one">Отприлике <xliff:g id="NUMBER_1">%,d</xliff:g> обавештење недељно</item>
-      <item quantity="few">Отприлике <xliff:g id="NUMBER_1">%,d</xliff:g> обавештења недељно</item>
-      <item quantity="other">Отприлике <xliff:g id="NUMBER_1">%,d</xliff:g> обавештења недељно</item>
+      <item quantity="one">Око <xliff:g id="NUMBER_1">%,d</xliff:g> обавештење недељно</item>
+      <item quantity="few">Око <xliff:g id="NUMBER_1">%,d</xliff:g> обавештења недељно</item>
+      <item quantity="other">Око <xliff:g id="NUMBER_1">%,d</xliff:g> обавештења недељно</item>
     </plurals>
     <string name="notifications_sent_never" msgid="9081278709126812062">"Никад"</string>
     <string name="manage_notification_access_title" msgid="6481256069087219982">"Обавештења на уређајима и у апликацијама"</string>
@@ -4745,8 +4746,8 @@
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"Укључи"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"Искључи"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"Не користи оптимизацију батерије"</string>
-    <string name="app_battery_optimization_title" msgid="389653121998016466">"Управљајте потрошњом батерије"</string>
-    <string name="app_battery_optimization_summary" msgid="7864783556193427398">"Подесите потрошњу батерије за апликације"</string>
+    <string name="app_battery_usage_title" msgid="346558380609793334">"Потрошња батерије за апликације"</string>
+    <string name="app_battery_usage_summary" msgid="6349965904306339539">"Подесите потрошњу батерије за апликације"</string>
     <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"Неограничено"</string>
     <string name="filter_battery_optimized_title" msgid="8236647176487754796">"Оптимизовано"</string>
     <string name="filter_battery_restricted_title" msgid="5886859505802563232">"Забрањено"</string>
@@ -5498,6 +5499,8 @@
     <string name="media_controls_title" msgid="403271085636252597">"Медији"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Закачи медија плејер"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Да бисте брзо наставили репродукцију, медија плејер остаје отворен у Брзим подешавањима"</string>
+    <string name="media_controls_lockscreen_title" msgid="2188311721857512510">"Приказуј медијски садржај на закључаном екрану"</string>
+    <string name="media_controls_lockscreen_description" msgid="3320333660404439510">"Да бисте брзо наставили репродукцију, медија плејер остаје отворен на закључаном екрану"</string>
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Приказуј препоруке за медије"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"На основу активности"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Сакриј плејер"</string>
