--- a/res/values-tr/strings.xml
+++ b/res/values-tr/strings.xml
@@ -70,10 +70,8 @@
     <string name="bluetooth_disconnect_all_profiles" product="device" msgid="6944790936166852428">"Cihazınızın <xliff:g id="DEVICE_NAME">%1$s</xliff:g> cihazıyla olan bağlantısı kesilecek."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Yeni cihaz eşle"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
-    <!-- no translation found for bluetooth_pair_right_ear_button (3979894494803078852) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_left_ear_button (1019938875726073791) -->
-    <skip />
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Sağ kulağı eşle"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Sol kulağı eşle"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Diğer kulağınızı eşleyin"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"Soldaki işitme cihazınız bağlandı.\n\nSağdakini eşlemek için cihazın açık ve eşlenmeye hazır olduğundan emin olun."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"Sağdaki işitme cihazınız bağlandı.\n\nSoldakini eşlemek için cihazın açık ve eşlenmeye hazır olduğundan emin olun."</string>
@@ -830,7 +828,7 @@
     <string name="bluetooth_menu_advanced" msgid="7633682234855216066">"Gelişmiş"</string>
     <string name="bluetooth_advanced_titlebar" msgid="5369701494951467257">"Gelişmiş Bluetooth"</string>
     <string name="bluetooth_empty_list_bluetooth_off" msgid="316627049372961941">"Bluetooth açık olduğunda, cihazınız yakındaki Bluetooth cihazlarla iletişim kurabilir."</string>
-    <string name="bluetooth_scanning_on_info_message" msgid="6667723887545056976">"Bluetooth açıkken cihazınız yakındaki diğer Bluetooth cihazlarla iletişim kurabilir.\n\nUygulamalar ve hizmetler cihaz deneyimini iyileştirmek için yakındaki cihazları Bluetooth kapalıyken bile her zaman tarayabilir. Bu özellik, örneğin, konuma dayalı özellikleri ve hizmetleri iyileştirmek için kullanılabilir. Bunu istediğiniz zaman "<annotation id="link">"Bluetooth tarama ayarlarından"</annotation>" değiştirebilirsiniz."</string>
+    <string name="bluetooth_scanning_on_info_message" msgid="6667723887545056976">"Bluetooth açıkken cihazınız yakındaki diğer Bluetooth cihazlarla iletişim kurabilir.\n\nUygulamalar ve hizmetler, cihaz deneyimini iyileştirmek için Bluetooth kapalıyken bile yakında cihaz olup olmadığını belirlemek her zaman için tarama yapabilir. Bu özellik, örneğin, konuma dayalı özellikleri ve hizmetleri iyileştirmek için kullanılabilir. Bunu istediğiniz zaman "<annotation id="link">"Bluetooth tarama ayarlarından"</annotation>" değiştirebilirsiniz."</string>
     <string name="ble_scan_notify_text" msgid="1358879010396045164">"Sistem uygulamaları ve hizmetleri, konum doğruluğunu iyileştirmek için Bluetooth cihazları yine de algılayabilir. Bu ayarı, <xliff:g id="LINK_BEGIN_0">LINK_BEGIN</xliff:g>tarama ayarlarından<xliff:g id="LINK_END_1">LINK_END</xliff:g> değiştirebilirsiniz."</string>
     <string name="bluetooth_connect_failed" msgid="7892663424429584925">"Bağlanılamadı. Tekrar deneyin."</string>
     <string name="device_details_title" msgid="1155622417516195481">"Cihaz ayrıntıları"</string>
@@ -1524,7 +1522,7 @@
     <string name="status_wifi_mac_address" msgid="4447611754614388914">"Kablosuz MAC adresi"</string>
     <string name="status_device_wifi_mac_address" msgid="1896121694334176494">"Cihaz kablosuz MAC adresi"</string>
     <string name="status_bt_address" msgid="6919660304578476547">"Bluetooth adresi"</string>
-    <string name="status_serial_number" msgid="9060064164331466789">"Seri numara"</string>
+    <string name="status_serial_number" msgid="9060064164331466789">"Seri numarası"</string>
     <string name="status_up_time" msgid="1274778533719495438">"Açık kalma süresi"</string>
     <string name="status_awake_time" msgid="2573925324168081586">"Uyanık geçen süre"</string>
     <string name="internal_memory" msgid="1869518160077033848">"Dahili dep birm"</string>
@@ -2063,7 +2061,6 @@
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"Uygulama tercihleri sıfırlansın mı?"</string>
     <string name="reset_app_preferences_desc" msgid="8550782670650158299">"Bu işlem, şunlarla ilgili tüm tercihleri sıfırlayacaktır:\n\n"<li>"Devre dışı bırakılan uygulamalar"</li>\n<li>"Devre dışı bırakılan uygulama bildirimleri"</li>\n<li>"İşlemler için varsayılan uygulamalar"</li>\n<li>"Uygulamalar için arka plan verileri kısıtlamaları"</li>\n<li>"Tüm izin kısıtlamaları"</li>\n<li>"Pil kullanımı ayarları"</li>\n\n"Uygulama verileriniz kaybolmayacak."</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"Uygulamaları sıfırla"</string>
-    <string name="manage_space_text" msgid="9013414693633572277">"Alanı yönet"</string>
     <string name="filter" msgid="9039576690686251462">"Filtre"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"Filtre seçeneklerini belirleyin"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"Tüm uygulamalar"</string>
@@ -2510,8 +2507,8 @@
     <string name="daltonizer_mode_tritanomaly_title" msgid="2278786218762602022">"Mavi-sarı"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"Gri tonlama"</string>
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"Yeşil zayıf, yeşil renk körlüğü"</string>
-    <string name="daltonizer_mode_protanomaly_summary" msgid="4617032854982040748">"Kırmızı zayıf, kırmızı renk körlüğü"</string>
-    <string name="daltonizer_mode_tritanomaly_summary" msgid="2428218320118180070">"Mavi renk körlüğü"</string>
+    <string name="daltonizer_mode_protanomaly_summary" msgid="4617032854982040748">"Kırmızı zayıf, protanomali"</string>
+    <string name="daltonizer_mode_tritanomaly_summary" msgid="2428218320118180070">"Tritanomali"</string>
     <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Ekstra loş"</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Ekranı ekstra loş yap"</string>
     <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"Ekstra loş kısayolu"</string>
@@ -2680,7 +2677,8 @@
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"Pil kullanımı"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"Son 24 saatteki kullanımı göster"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"Son tam şarjdan bu yana kullanımı göster"</string>
-    <string name="battery_details_title" msgid="4531369291819754178">"Pil kullanımı"</string>
+    <!-- no translation found for battery_details_title (3289680399291090588) -->
+    <skip />
     <string name="details_subtitle" msgid="2550872569652785527">"Kullanım ayrıntıları"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"Pil kullanımını ayarla"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"Dahil olan paketler"</string>
@@ -2699,8 +2697,12 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Bazı özellikler sınırlı olabilir"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Yüksek pil kullanımı"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"En fazla pil kullanan uygulamaları göster"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Şarj etme geçici olarak sınırlı"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Pilinizi korumak için. Daha fazla bilgi edinin."</string>
+    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Şarja devam et"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Yüksek sıcaklıklar ve uzun şarj etme süreleri gibi belirli durumlarda pil sağlığını korumak için şarj etme işlemi <xliff:g id="PERCENT">%1$s</xliff:g> ile sınırlanabilir.\n\nBu gibi durumlar sona erdiğinde telefonunuz otomatik olarak normal şarj etmeye başlar."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Yüksek sıcaklıklar ve uzun şarj etme süreleri gibi belirli durumlarda pil sağlığını korumak için şarj etme işlemi <xliff:g id="PERCENT">%1$s</xliff:g> ile sınırlanabilir.\n\nBu gibi durumlar sona erdiğinde tabletiniz otomatik olarak normal şarj etmeye başlar."</string>
@@ -2736,6 +2738,8 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Bu uygulama arka planda pil gücünü kullanabilecek. Piliniz beklenenden daha erken bitebilir."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Kaldır"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"İptal"</string>
+    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
+    <skip />
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Uygulamalarınız normal miktarda pil kullanıyor. Uygulamalar çok fazla pil kullanırsa telefonunuz size bazı önerilerde bulunacaktır.\n\nPiliniz azaldığında her zaman Pil Tasarrufu\'nu açabilirsiniz."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Uygulamalarınız normal miktarda pil kullanıyor. Uygulamalar çok fazla pil kullanırsa tabletiniz size bazı önerilerde bulunacaktır.\n\nPiliniz azaldığında her zaman Pil Tasarrufu\'nu açabilirsiniz."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Uygulamalarınız normal miktarda pil kullanıyor. Uygulamalar çok fazla pil kullanırsa cihazınız size bazı önerilerde bulunacaktır.\n\nPiliniz azaldığında her zaman Pil Tasarrufu\'nu açabilirsiniz."</string>
@@ -2780,7 +2784,6 @@
     <string name="battery_full_charge_last" msgid="465146408601016923">"Tam şarjla yaklaşık kullanım süresi:"</string>
     <string name="battery_footer_summary" msgid="8221691063048377342">"Pil kullanım verileri yaklaşık değerler olup kullanıma göre değişebilir."</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"Pil kullanımı"</string>
-    <string name="battery_detail_manage_title" msgid="7910805419446927887">"Pil kullanımını yönetin"</string>
     <string name="battery_total_and_bg_usage" msgid="8266478675516886819">"Toplam <xliff:g id="TIME_0">^1</xliff:g> • Son kez tamamen şarj olduktan sonra\narka planda <xliff:g id="TIME_1">^2</xliff:g> kullanıldı"</string>
     <string name="battery_total_and_bg_usage_24hr" msgid="2393832614028187281">"Toplam <xliff:g id="TIME_0">^1</xliff:g> • Son 24 saatte \narka planda <xliff:g id="TIME_1">^2</xliff:g> kullanıldı"</string>
     <string name="battery_total_and_bg_usage_with_period" msgid="2809037516933951047">"Toplam <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_PERIOD">^3</xliff:g> arasında\narka planda <xliff:g id="TIME_1">^2</xliff:g> kullanıldı"</string>
@@ -2849,6 +2852,10 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Pil kullanımı verileri yaklaşık değerler olup telefon şarj olurken kullanım ölçülmez"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Pil kullanım verileri, telefonunuzu birkaç saat kullanmanızın ardından görüntülenebilir"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Pil kullanım grafiği"</string>
+    <!-- no translation found for daily_battery_usage_chart (4176059567682992686) -->
+    <skip />
+    <!-- no translation found for hourly_battery_usage_chart (3098314511076561272) -->
+    <skip />
     <string name="process_stats_summary_title" msgid="502683176231281732">"İşlem İstatistikleri"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Meraklısı için, çalışan işlemlerle ilgili istatistikler"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Bellek kullanımı"</string>
@@ -3748,7 +3755,7 @@
     <string name="bubbles_feature_education" msgid="4088275802688887634">"Bazı bildirimler ve diğer içerikler ekranda baloncuk olarak görünebilir. Bir baloncuğu açmak için dokunun. Kapatmak için ekranın alt kısmına sürükleyin."</string>
     <string name="bubbles_app_toggle_title" msgid="5319021259954576150">"Baloncuklar"</string>
     <string name="bubbles_conversation_app_link" msgid="5468779786387915337">"Tüm Baloncuk ayarları"</string>
-    <string name="bubbles_conversation_toggle_title" msgid="5225039214083311316">"Bu görüşmeyi balon olarak göster"</string>
+    <string name="bubbles_conversation_toggle_title" msgid="5225039214083311316">"Bu görüşmeyi baloncuk olarak göster"</string>
     <string name="bubbles_conversation_toggle_summary" msgid="720229032254323578">"Kayan simgeyi uygulamaların üzerinde gösterir"</string>
     <string name="bubbles_app_toggle_summary" msgid="1574515698567947948">"<xliff:g id="APP_NAME">%1$s</xliff:g> uygulamasının bazı bildirimleri baloncuk olarak göstermesine izin verin"</string>
     <string name="bubbles_feature_disabled_dialog_title" msgid="1794193899792284007">"Cihaz için baloncuklar açılsın mı?"</string>
@@ -4673,8 +4680,10 @@
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"Şimdi aç"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"Şimdi kapat"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"Pil optimizasyonu kullanılmıyor"</string>
-    <string name="app_battery_optimization_title" msgid="389653121998016466">"Pil kullanımını yönetme"</string>
-    <string name="app_battery_optimization_summary" msgid="7864783556193427398">"Uygulamalar için pil kullanımını ayarlayın"</string>
+    <!-- no translation found for app_battery_usage_title (346558380609793334) -->
+    <skip />
+    <!-- no translation found for app_battery_usage_summary (6349965904306339539) -->
+    <skip />
     <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"Kısıtlanmamış"</string>
     <string name="filter_battery_optimized_title" msgid="8236647176487754796">"Optimize edilmiş"</string>
     <string name="filter_battery_restricted_title" msgid="5886859505802563232">"Kısıtlanmış"</string>
@@ -5411,6 +5420,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"Medya"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Medya oynatıcıyı sabitle"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Medya oynatıcı, oynatmayı hızlıca devam ettirmek için Hızlı Ayarlar\'da açık kalır"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Medya önerilerini göster"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Etkinliğinize dayalı olarak"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Oynatıcıyı gizle"</string>
