--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -70,10 +70,8 @@
     <string name="bluetooth_disconnect_all_profiles" product="device" msgid="6944790936166852428">"آپ کا آلہ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> سے غیر منسلک ہو جائے گا۔"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"نئے آلہ کا جوڑا بنائیں"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"بلوٹوتھ"</string>
-    <!-- no translation found for bluetooth_pair_right_ear_button (3979894494803078852) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_left_ear_button (1019938875726073791) -->
-    <skip />
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"دائیں کان کا جوڑا بنائیں"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"بائیں کان کا جوڑا بنائیں"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"اپنے دوسرے کان کا جوڑا بنائیں"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"آپ کے بائیں کان کا سماعتی آلہ منسلک ہے۔\n\nدائیں کان کا جوڑا بنانے کے لیے، اس بات کو یقینی بنائیں کہ یہ آن ہے اور جوڑا بنانے کے لیے تیار ہے۔"</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"آپ کے دائیں کان کا سماعتی آلہ منسلک ہے۔\n\nبائیں کان کا جوڑا بنانے کے لیے، اس بات کو یقینی بنائیں کہ یہ آن ہے اور جوڑا بنانے کے لیے تیار ہے۔"</string>
@@ -2063,7 +2061,6 @@
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"ایپ کی ترجیحات کو ری سیٹ کریں؟"</string>
     <string name="reset_app_preferences_desc" msgid="8550782670650158299">"اس سے مندرجہ ذیل کیلئے تمام ترجیحات ری سیٹ ہو جائیں گی:\n\n"<li>"غیر فعال ایپس"</li>\n<li>"غیر فعال ایپ کی اطلاعات"</li>\n<li>"کارروائیوں کیلئے ڈیفالٹ ایپلیکیشنز"</li>\n<li>"ایپس کیلئے پس منظر کے ڈیٹا کی پابندیاں"</li>\n<li>"اجازت سے متعلق کوئی بھی پابندیاں"</li>\n<li>"بیٹری کے استعمال کی ترتیبات"</li>\n\n" آپ ایپ کے کسی بھی ڈیٹا سے محروم نہیں ہوں گے۔"</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"ایپس کو ری سیٹ کریں"</string>
-    <string name="manage_space_text" msgid="9013414693633572277">"خالی جگہ کا نظم کریں"</string>
     <string name="filter" msgid="9039576690686251462">"فلٹر"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"فلٹر کے اختیارات منتخب کریں"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"سبھی ایپس"</string>
@@ -2323,7 +2320,7 @@
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"زوم کرنے کیلئے 3 بار تھپتھپائیں"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"زوم کرنے کیلئے ایک بٹن پر تھپتھپائیں"</string>
     <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"مواد کو بڑا کرنے کے لیے اسکرین پر فوری طور پر زوم ان کریں"</string>
-    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"‏‎&lt;b&gt;‎زوم ان کرنے کے لیے:‎&lt;/b&gt;&lt;br/&gt; {0,number,integer}۔ میگنیفکیشن شروع کرنے کے لیے شارٹ کٹ کا استعمال کریں‎&lt;br/&gt; {1,number,integer}۔ اسکرین پر تھپتھپائیں‎&lt;br/&gt; {2,number,integer}۔ اسکرین پر اِدھر اُدھر حرکت کرنے کے لیے 2 انگلیوں سے گھسیٹیں‎&lt;br/&gt; {3,number,integer}۔ زوم کو ایڈجسٹ کرنے کے لیے 2 انگلیوں سے چٹکی بھریں‎&lt;br/&gt; {4,number,integer}۔ میگنیفکیشن بند کرنے کے لیے شارٹ کٹ کا استعمال کریں‎&lt;br/&gt;&lt;br/&gt; &lt;b&gt;‎عارضی طور پر زوم ان کرنے کے لیے:‎&lt;/b&gt;&lt;br/&gt; {0,number,integer}۔ یقینی بنائیں کہ آپ کی میگنیفیکیشن کی قسم فُل اسکرین پر سیٹ ہے‎&lt;br/&gt; {1,number,integer}۔ میگنیفکیشن شروع کرنے کے لیے شارٹ کٹ کا استعمال کریں‎&lt;br/&gt; {2,number,integer}۔ اسکرین پر کسی بھی جگہ پر ٹچ کریں اور دبائیں رکھیں‎&lt;br/&gt; {3,number,integer}۔ اسکرین پر اِدھر اُدھر حرکت کرنے کے لیے انگلی کو گھسیٹیں‎&lt;br/&gt; {4,number,integer}۔ میگنیفکیشن بند کرنے کے لیے انگلی اٹھائيں"</string>
+    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"‏‎&lt;b&gt;‎زوم ان کرنے کے لیے:‎&lt;/b&gt;&lt;br/&gt; {0,number,integer}۔ میگنیفکیشن شروع کرنے کے لیے شارٹ کٹ کا استعمال کریں‎&lt;br/&gt; {1,number,integer}۔ اسکرین پر تھپتھپائیں‎&lt;br/&gt; {2,number,integer}۔ اسکرین پر اِدھر اُدھر حرکت کرنے کے لیے 2 انگلیوں سے گھسیٹیں‎&lt;br/&gt; {3,number,integer}۔ زوم کو ایڈجسٹ کرنے کے لیے 2 انگلیوں سے چٹکی بھریں‎&lt;br/&gt; {4,number,integer}۔ میگنیفکیشن بند کرنے کے لیے شارٹ کٹ کا استعمال کریں‎&lt;br/&gt;&lt;br/&gt; &lt;b&gt;‎ عارضی طور پر زوم ان کرنے کے لیے:‎&lt;/b&gt;&lt;br/&gt; {0,number,integer}۔ یقینی بنائیں کہ آپ کی میگنیفیکیشن کی قسم فُل اسکرین پر سیٹ ہے‎&lt;br/&gt; {1,number,integer}۔ میگنیفکیشن شروع کرنے کے لیے شارٹ کٹ کا استعمال کریں‎&lt;br/&gt; {2,number,integer}۔ اسکرین پر کسی بھی جگہ پر ٹچ کریں اور دبائیں رکھیں‎&lt;br/&gt; {3,number,integer}۔ اسکرین پر اِدھر اُدھر حرکت کرنے کے لیے انگلی کو گھسیٹیں‎&lt;br/&gt; {4,number,integer}۔ میگنیفکیشن بند کرنے کے لیے انگلی اٹھائيں"</string>
     <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"جب میگنیفکیشن آن ہو، تو آپ اپنی اسکرین پر زوم ان کرسکتے ہیں۔\n\n"<b>"زوم کرنے کے لیے"</b>"، میگنیفکیشن شروع کریں، پھر اسکرین پر کہیں بھی تھپتھپائیں۔\n"<ul><li>" اسکرول کرنے کے لیے 2 یا زائد انگلیوں سے گھسیٹیں"</li>\n<li>"زوم ایڈجیسٹ کرنے کے لیے 2 یا زائد انگلیوں سے چٹکی بھریں"</li></ul>\n\n<b>"عارضی طور پر زوم کرنے کے لیے"</b>"، میگنیفکیشن شروع کریں، پھر اسکرین پر کہیں بھی ٹچ اور ہولڈ کریں۔\n"<ul><li>"اسکرین کے اردگرد منتقل کرنے کے لیے گھسیٹیں"</li>\n<li>"زوم آؤٹ کرنے کے لیے انگلی اٹھائیں"</li></ul>\n\n"آپ کی بورڈ یا نیویگیشن بار پر زوم ان نہیں کرسکتے۔"</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"صفحہ <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> از <xliff:g id="NUM_PAGES">%2$d</xliff:g>"</string>
     <string name="accessibility_tutorial_dialog_title_button" msgid="4681164949716215131">"کھولنے کے لیے ایکسیسبیلٹی بٹن کا استعمال کریں"</string>
@@ -2415,7 +2412,7 @@
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"رنگوں کی تقلیب استعمال کریں"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"رنگوں کی تقلیب کا شارٹ کٹ"</string>
     <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"رنگوں کی تقلیب سے اسکرینز کا ہلکا رنگ گہرا ہو جاتا ہے۔ یہ گہری اسکرینز کو ہلکے رنگ میں بھی تبدیل کرتی ہے۔"</string>
-    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"‏‎&lt;b&gt;‎یاد رکھیں‎&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt;‎ میڈیا اور تصاویر میں رنگ تبدیل ہو جائیں گے‎&lt;/li&gt; &lt;li&gt;‎ رنگوں کی تقلیب تمام ایپس پر کام کرتی ہے‎&lt;/li&gt; &lt;li&gt;‎ گہرے پس منظر کو ڈسپلے کرنے کے لیے، اس کی بجائے گہری تھیم کا استعمال کیا جا سکتا ہے‎&lt;/li&gt; &lt;/ol&gt;‎"</string>
+    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"‏‎&lt;b&gt;‎یاد رکھیں‎&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt;‎  میڈیا اور تصاویر میں رنگ تبدیل ہو جائیں گے‎&lt;/li&gt; &lt;li&gt;‎  رنگوں کی تقلیب تمام ایپس پر کام کرتی ہے‎&lt;/li&gt; &lt;li&gt;‎  گہرے پس منظر کو ڈسپلے کرنے کے لیے، اس کی بجائے گہری تھیم کا استعمال کیا جا سکتا ہے‎&lt;/li&gt; &lt;/ol&gt;‎"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"خودکار کلک (ہولڈ کا وقت)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"خودکار کلک کے بارے میں (پسنے کا وقت)"</string>
     <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"خود کار کلک کے بارے میں مزید جانیں (پسنے کا وقت)"</string>
@@ -2680,7 +2677,7 @@
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"بیٹری کا استعمال"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"گزشتہ 24 گھنٹے کا استعمال ملاحظہ کریں"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"پچھلے مکمل چارج کے بعد سے استعمال دیکھیں"</string>
-    <string name="battery_details_title" msgid="4531369291819754178">"بیٹری کا استعمال"</string>
+    <string name="battery_details_title" msgid="3289680399291090588">"ایپ کی بیٹری کے استعمال"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"استعمال کی تفصیلات"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"پاور کا استعمال ایڈجسٹ کریں"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"شامل کردہ پیکیجز"</string>
@@ -2699,8 +2696,10 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"کچھ خصوصیات محدود ہو سکتی ہيں"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"بیٹری کا بہت زیادہ استعمال"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"سب سے زیادہ بیٹری استعمال کرنے والی ایپس دیکھیں"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"چارجنگ عارضی طور پر محدود ہے"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"آپ کی بیٹری کو محفوظ رکھنے کے لیے۔ مزید جانیں۔"</string>
+    <string name="battery_tip_limited_temporarily_title" msgid="5962767837251276527">"چارجنگ موقوف ہے"</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="4236185146380247801">"بیٹری کی عمر بڑھانے کے لیے بیٹری کی حفاظت کرنا\nمزید جاننے کے لیے تھپتھپائیں"</string>
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"چارج کرنا دوبارہ شروع کریں"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"بہت زیادہ درجہ حرارت اور چارجنگ کی طویل مدتوں جیسے مخصوص حالات میں، چارجنگ بیٹری کی صحت کی حفاظت میں مدد کے لیے <xliff:g id="PERCENT">%1$s</xliff:g> تک محدود ہو سکتی ہے۔\n\nان حالات کے ختم ہونے پر آپ کا فون نارمل طریقے سے خودکار طور پر چارج ہوگا۔"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"بہت زیادہ درجہ حرارت اور چارجنگ کی طویل مدتوں جیسے مخصوص حالات میں، چارجنگ بیٹری کی صحت کی حفاظت میں مدد کے لیے <xliff:g id="PERCENT">%1$s</xliff:g> تک محدود ہو سکتی ہے۔\n\nان حالات کے ختم ہونے پر آپ کا ٹیبلیٹ نارمل طریقے سے خودکار طور پر چارج ہوگا۔"</string>
@@ -2736,6 +2735,7 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"یہ ایپ پس منظر میں بیٹری استعمال کر سکے گی۔ آپ کی بیٹری توقع سے پہلے ختم ہو سکتی ہے۔"</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"ہٹائیں"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"منسوخ کریں"</string>
+    <string name="battery_tip_charge_to_full_button" msgid="6701709034348116261">"مکمل چارج کریں"</string>
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"آپ کی ایپس حسب معمول مقدار میں بیٹری استعمال کر رہی ہیں۔ اگر ایپس بہت زیادہ بیٹری استعمال کرتی ہیں تو آپ کا فون ایسے اقدامات کی تجویز پیش کرے گا جو آپ کر سکتے ہیں۔\n\nاگر آپ کی بیٹری کم ہو رہی ہے تو آپ ہمیشہ بیٹری سیور آن کر سکتے ہیں۔"</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"آپ کی ایپس حسب معمول مقدار میں بیٹری استعمال کر رہی ہیں۔ اگر ایپس بہت زیادہ بیٹری استعمال کرتی ہیں تو آپ کا ٹیبلیٹ ایسے اقدامات کی تجویز پیش کرے گا جو آپ کر سکتے ہیں۔\n\nاگر آپ کی بیٹری کم ہو رہی ہے تو آپ ہمیشہ بیٹری سیور آن کر سکتے ہیں۔"</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"آپ کی ایپس حسب معمول مقدار میں بیٹری استعمال کر رہی ہیں۔ اگر ایپس بہت زیادہ بیٹری استعمال کرتی ہیں تو آپ کا آلہ ایسے اقدامات کی تجویز پیش کرے گا جو آپ کر سکتے ہیں۔\n\nاگر آپ کی بیٹری کم ہو رہی ہے تو آپ ہمیشہ بیٹری سیور آن کر سکتے ہیں۔"</string>
@@ -2780,7 +2780,6 @@
     <string name="battery_full_charge_last" msgid="465146408601016923">"پورا چارج ہونے پر تقریباً اتنی دیر تک بیٹری چلتی ہے"</string>
     <string name="battery_footer_summary" msgid="8221691063048377342">"بیٹری کے استعمال کا ڈیٹا تخمینی ہے اور استعمال کی بنیاد پر تبدیل ہو سکتا ہے۔"</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"بیٹری کا استعمال"</string>
-    <string name="battery_detail_manage_title" msgid="7910805419446927887">"بیٹری کے استعمال کا نظم کریں"</string>
     <string name="battery_total_and_bg_usage" msgid="8266478675516886819">"کُل <xliff:g id="TIME_0">^1</xliff:g> • پس منظر میں <xliff:g id="TIME_1">^2</xliff:g> بیٹری کا استعمال\nپچھلے مکمل چارج کے بعد سے"</string>
     <string name="battery_total_and_bg_usage_24hr" msgid="2393832614028187281">"کُل<xliff:g id="TIME_0">^1</xliff:g> • پس منظر میں <xliff:g id="TIME_1">^2</xliff:g> بیٹری کا استعمال\nگزشتہ 24 گھنٹے میں"</string>
     <string name="battery_total_and_bg_usage_with_period" msgid="2809037516933951047">"کُل <xliff:g id="TIME_0">^1</xliff:g> • پس منظر میں <xliff:g id="TIME_1">^2</xliff:g>\n<xliff:g id="TIME_PERIOD">^3</xliff:g> میں"</string>
@@ -2849,6 +2848,8 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"بیٹری کے استعمال کا ڈیٹا تخمینی ہے اور فون چارج ہوتے وقت بیٹری کے استعمال کی پیمائش نہیں کرتا ہے"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"آپ کے اپنے فون کو کچھ گھنٹوں تک استعمال کرنے کے بعد بیٹری کے استعمال کا ڈیٹا دستیاب ہوگا"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"بیٹری کے استعمال کا چارٹ"</string>
+    <string name="daily_battery_usage_chart" msgid="4176059567682992686">"یومیہ بیٹری کے استعمال کا چارٹ"</string>
+    <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"فی گھنٹہ بیٹری کے استعمال کا چارٹ"</string>
     <string name="process_stats_summary_title" msgid="502683176231281732">"پروسیس اعداد و شمار"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"جاری پروسیسز کے بارے میں مفید اعداد و شمار"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"میموری کا استعمال"</string>
@@ -4673,8 +4674,8 @@
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"ابھی آن کریں"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"ابھی آف کریں"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"بیٹری کی کارکردگی بہتر بنانے کا استعمال نہیں ہو رہا"</string>
-    <string name="app_battery_optimization_title" msgid="389653121998016466">"بیٹری کے استعمال کا نظم کریں"</string>
-    <string name="app_battery_optimization_summary" msgid="7864783556193427398">"ایپس کے لیے بیٹری کا استعمال سیٹ کریں"</string>
+    <string name="app_battery_usage_title" msgid="346558380609793334">"ایپ کی بیٹری کے استعمال"</string>
+    <string name="app_battery_usage_summary" msgid="6349965904306339539">"ایپس کے لیے بیٹری کا استعمال سیٹ کریں"</string>
     <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"‏پابندی کے بغیرx"</string>
     <string name="filter_battery_optimized_title" msgid="8236647176487754796">"بہتر کردہ"</string>
     <string name="filter_battery_restricted_title" msgid="5886859505802563232">"ممنوع"</string>
@@ -5411,6 +5412,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"میڈیا"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"میڈیا پلیئر کو پن کریں"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"پلے بیک کو فوری طور پر دوبارہ شروع کرنے کے لیے میڈیا پلیئر فوری ترتیبات میں کھلا رہتا ہے"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"میڈیا کی تجاویز دکھائیں"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"آپ کی سرگرمی کی بنیاد پر"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"کھلاڑی کو چھپائیں"</string>
