--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -72,10 +72,8 @@
     <string name="bluetooth_disconnect_all_profiles" product="device" msgid="6944790936166852428">"Ваша прылада адключыцца ад прылады <xliff:g id="DEVICE_NAME">%1$s</xliff:g>."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Спалучыць новую прыладу"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
-    <!-- no translation found for bluetooth_pair_right_ear_button (3979894494803078852) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_left_ear_button (1019938875726073791) -->
-    <skip />
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Спалучыць справа"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Спалучыць злева"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Спалучыце для іншага вуха"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"Падключаны слыхавы апарат для левага вуха.\n\nКаб спалучыць апарат для правага вуха, уключыце яго."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"Падключаны слыхавы апарат для правага вуха.\n\nКаб спалучыць апарат для левага вуха, уключыце яго."</string>
@@ -1489,8 +1487,7 @@
     <string name="sim_enter_new" msgid="9010947802784561582">"Новы PIN-код SIM-карты"</string>
     <string name="sim_reenter_new" msgid="6131418271490374263">"Увядзіце новы PIN-код яшчэ раз"</string>
     <string name="sim_change_pin" msgid="1104103818545005448">"PIN-код SIM-карты"</string>
-    <!-- no translation found for sim_invalid_pin_hint (3376397829969578877) -->
-    <skip />
+    <string name="sim_invalid_pin_hint" msgid="3376397829969578877">"Увядзіце PIN-код з 4-8 лічбаў"</string>
     <string name="sim_pins_dont_match" msgid="1540348773896609260">"PIN-коды не супадаюць"</string>
     <string name="sim_change_failed" msgid="316723087029061740">"Немагчыма змян. PIN.\nМагч., няправ. PIN."</string>
     <string name="sim_change_succeeded" msgid="3516905528149069739">"PIN-код SIM-карты паспяхова зменены"</string>
@@ -2059,7 +2056,7 @@
     <string name="forgot_password_title" msgid="3967873480875239885">"Звярніцеся да ІТ-адміністратара"</string>
     <string name="forgot_password_text" msgid="2583194470767613163">"ІТ-адміністратары могуць дапамагчы вам скінуць PIN-код, узор разблакіроўкі ці пароль"</string>
     <string name="install_all_warning" product="tablet" msgid="7010749217925069520">"Ваш планшэт і асабістыя даныя больш уразлівыя для нападаў невядомых праграм. Пры ўсталёўцы праграм з гэтай крыніцы вы згаджаецеся, што несяце адказнасць за любыя пашкоджанні планшэта ці страту даных, якія могуць адбыцца ў выніку выкарыстання гэтых праграм."</string>
-    <string name="install_all_warning" product="default" msgid="652516435709047343">"Ваш тэлефон і асабістыя даныя больш уразлівыя для нападаў невядомых праграм. Пры ўсталёўцы праграм з гэтай крыніцы вы згаджаецеся, што несяце адказнасць за любыя пашкоджанні тэлефона ці страту даных, якія могуць адбыцца ў выніку выкарыстання гэтых праграм."</string>
+    <string name="install_all_warning" product="default" msgid="652516435709047343">"Ваш тэлефон і асабістыя даныя больш прыступныя для атак невядомых праграм. Усталёўваючы гэту праграму, вы згаджаецеся з тым, што несяце адказнасць за любыя пашкоджанні тэлефона ці страту даных, якія могуць адбыцца ў выніку выкарыстання гэтай праграмы."</string>
     <string name="install_all_warning" product="device" msgid="2348262609815354500">"Ваша прылада і асабістыя даныя больш прыступныя для нападаў невядомых праграм. Усталёўваючы праграмы з гэтай крыніцы вы згаджаецеся, што несяце адказнасць за любыя пашкоджанні прылады ці страту даных, якія могуць адбыцца ў выніку выкарыстання гэтых праграм."</string>
     <string name="advanced_settings" msgid="2368905204839169094">"Пашыраныя налады"</string>
     <string name="advanced_settings_summary" msgid="1823765348195530035">"Уключыць дадатковыя параметры налад"</string>
@@ -2114,7 +2111,6 @@
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"Скінуць налады праграм?"</string>
     <string name="reset_app_preferences_desc" msgid="8550782670650158299">"Будуць скінуты наступныя налады:\n\n"<li>" адключаныя праграмы;"</li>\n<li>"адключаныя апавяшчэнні праграм;"</li>\n<li>"стандартныя праграмы для дзеянняў;"</li>\n<li>"абмежаванні на фонавую перадачу даных для праграм;"</li>\n<li>"абмежаванні дазволаў;"</li>\n<li>"налады выкарыстання зараду."</li>\n\n"Даныя праграм не будуць выдалены."</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"Скінуць праграмы"</string>
-    <string name="manage_space_text" msgid="9013414693633572277">"Кіраванне вольным месцам"</string>
     <string name="filter" msgid="9039576690686251462">"Фільтр"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"Выберыце параметры фільтра"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"Усе праграмы"</string>
@@ -2745,7 +2741,8 @@
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"Выкарыстанне зараду"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"Выкарыстанне за апошнія 24 гадзіны"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"Выкарыстанне з моманту поўнай зарадкі"</string>
-    <string name="battery_details_title" msgid="4531369291819754178">"Выкарыстанне зараду"</string>
+    <!-- no translation found for battery_details_title (3289680399291090588) -->
+    <skip />
     <string name="details_subtitle" msgid="2550872569652785527">"Падрабязнасці выкарыстання"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"Адрэгуляваць спажыванне энергіі"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"Уключаныя пакеты"</string>
@@ -2764,8 +2761,12 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Некаторыя функцыі могуць быць абмежаваныя"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Павышанае выкарыстанне зараду"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Паглядзіце, якія праграмы найбольш спажываюць зарад"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Зарадка часова абмежавана"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Для эканоміі зараду акумулятара. Даведайцеся больш."</string>
+    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Узнавіць зарадку"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Каб павялічыць тэрмін службы акумулятара, у пэўных абставінах, напрыклад пры працяглай зарадцы ва ўмовах высокай тэмпературы, узровень зараду можа быць абмежаваны <xliff:g id="PERCENT">%1$s</xliff:g>.\n\nКалі абставіны зменяцца, тэлефон аўтаматычна пяройдзе ў звычайны рэжым зарадкі."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Каб павялічыць тэрмін службы акумулятара, у пэўных абставінах, напрыклад пры працяглай зарадцы ва ўмовах высокай тэмпературы, узровень зараду можа быць абмежаваны <xliff:g id="PERCENT">%1$s</xliff:g>.\n\nКалі абставіны зменяцца, планшэт аўтаматычна пяройдзе ў звычайны рэжым зарадкі."</string>
@@ -2811,6 +2812,8 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Гэта праграма будзе спажываць зарад акумулятара ў фонавым рэжыме. Зарад можа скончыцца хутчэй, чым звычайна."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Зняць"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Скасаваць"</string>
+    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
+    <skip />
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Вашы праграмы спажываюць нармальную колькасць зараду акумулятара. Калі выкарыстанне зараду павысіцца, вы атрымаеце адпаведныя рэкамендацыі.\n\nВы заўсёды можаце ўключыць рэжым эканоміі зараду."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Вашы праграмы спажываюць нармальную колькасць зараду акумулятара. Калі выкарыстанне зараду павысіцца, вы атрымаеце адпаведныя рэкамендацыі.\n\nВы заўсёды можаце ўключыць рэжым эканоміі зараду."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Вашы праграмы спажываюць нармальную колькасць зараду акумулятара. Калі выкарыстанне зараду павысіцца, вы атрымаеце адпаведныя рэкамендацыі.\n\nВы заўсёды можаце ўключыць рэжым эканоміі зараду."</string>
@@ -2859,7 +2862,6 @@
     <string name="battery_full_charge_last" msgid="465146408601016923">"Прыблізны час працы пры поўным зарадзе акумулятара"</string>
     <string name="battery_footer_summary" msgid="8221691063048377342">"Даныя пра выкарыстанне зараду акумулятара з\'яўляюцца прыблізнымі і могуць змяняцца ў залежнасці ад умоў."</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"Выкарыстанне зараду"</string>
-    <string name="battery_detail_manage_title" msgid="7910805419446927887">"Кіраваць выкарыстаннем зараду"</string>
     <string name="battery_total_and_bg_usage" msgid="8266478675516886819">"Усяго <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> працы ў фонавым рэжыме\nз моманту апошняй поўнай зарадкі"</string>
     <string name="battery_total_and_bg_usage_24hr" msgid="2393832614028187281">"Усяго <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> працы ў фонавым рэжыме\nза апошнія 24 гадз"</string>
     <string name="battery_total_and_bg_usage_with_period" msgid="2809037516933951047">"Усяго <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> у фонавым рэжыме\nза перыяд <xliff:g id="TIME_PERIOD">^3</xliff:g>"</string>
@@ -2913,14 +2915,11 @@
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"пры ўзроўні зараду акумулятара <xliff:g id="PERCENT">%1$s</xliff:g>"</string>
     <string name="battery_percentage" msgid="1779934245963043490">"Працэнт зараду акумулятара"</string>
     <string name="battery_percentage_description" msgid="2321465139126125541">"Паказваць працэнт зараду акумулятара на панэлі стану"</string>
-    <!-- no translation found for battery_usage_chart_graph_hint_last_full_charge (6570336408060566877) -->
-    <skip />
+    <string name="battery_usage_chart_graph_hint_last_full_charge" msgid="6570336408060566877">"Узровень зарадкі акумулятара з моманту апошняй поўнай зарадкі"</string>
     <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"Узровень зараду акумулятара за апошнія 24 гадз"</string>
-    <!-- no translation found for battery_app_usage (8976453608783133770) -->
-    <skip />
+    <string name="battery_app_usage" msgid="8976453608783133770">"Выкарыстанне праграм з моманту апошняй поўнай зарадкі"</string>
     <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"Выкарыстанне праграмай зараду за апошнія 24 гадз"</string>
-    <!-- no translation found for battery_system_usage (1395943945140097585) -->
-    <skip />
+    <string name="battery_system_usage" msgid="1395943945140097585">"Выкарыстанне сістэмы з моманту апошняй поўнай зарадкі"</string>
     <string name="battery_system_usage_for_past_24" msgid="3341520273114616263">"Выкарыстанне сістэмай зараду за апошнія 24 гадз"</string>
     <string name="battery_system_usage_for" msgid="3248552137819897140">"Выкарыстанне сістэмай за <xliff:g id="SLOT">%s</xliff:g>"</string>
     <string name="battery_app_usage_for" msgid="7309909074935858949">"Выкарыстанне праграмай за <xliff:g id="SLOT">%s</xliff:g>"</string>
@@ -2931,6 +2930,10 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Даныя пра выкарыстанне зараду з\'яўляюцца прыблізнымі. Падчас зарадкі тэлефона вымярэнні не праводзяцца"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Даныя пра выкарыстанне зараду з\'явяцца пасля некалькіх гадзін выкарыстання тэлефона"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Дыяграма выкарыстання зараду"</string>
+    <!-- no translation found for daily_battery_usage_chart (4176059567682992686) -->
+    <skip />
+    <!-- no translation found for hourly_battery_usage_chart (3098314511076561272) -->
+    <skip />
     <string name="process_stats_summary_title" msgid="502683176231281732">"Статыстыка працэсаў"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Падрабязная статыстыка запушчаных працэсаў"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Аб\'ём выкарыстання памяці"</string>
@@ -4823,16 +4826,13 @@
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"Уключыць"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"Выключыць"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"Не выкарыстоўвае аптымізацыю акумулятара"</string>
-    <!-- no translation found for app_battery_optimization_title (389653121998016466) -->
+    <!-- no translation found for app_battery_usage_title (346558380609793334) -->
     <skip />
-    <!-- no translation found for app_battery_optimization_summary (7864783556193427398) -->
+    <!-- no translation found for app_battery_usage_summary (6349965904306339539) -->
     <skip />
-    <!-- no translation found for filter_battery_unrestricted_title (821027369424198223) -->
-    <skip />
-    <!-- no translation found for filter_battery_optimized_title (8236647176487754796) -->
-    <skip />
-    <!-- no translation found for filter_battery_restricted_title (5886859505802563232) -->
-    <skip />
+    <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"Без абмежаванняў"</string>
+    <string name="filter_battery_optimized_title" msgid="8236647176487754796">"Аптымізавана"</string>
+    <string name="filter_battery_restricted_title" msgid="5886859505802563232">"З абмежаваннямі"</string>
     <string name="lockscreen_remote_input" msgid="6030274311185811503">"Калі прылада заблакіравана, не дазваляць набіраць адказы або іншы тэкст у апавяшчэннях"</string>
     <string name="default_spell_checker" msgid="7108373288347014351">"Стандартная праверка правапісу"</string>
     <string name="choose_spell_checker" msgid="7402513404783243675">"Праверка правапісу"</string>
@@ -5596,6 +5596,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"Мультымедыя"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Замацаваць медыяпрайгравальнік"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Каб хутка ўзнавіць прайграванне, медыяпрайгравальнік застаецца адкрытым у хуткіх наладах"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Паказваць рэкамендацыі мультымедыя"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"На аснове вашых дзеянняў"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Схаваць прайгравальнік"</string>
