--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -70,10 +70,8 @@
     <string name="bluetooth_disconnect_all_profiles" product="device" msgid="6944790936166852428">"El dispositiu es desconnectarà de: <xliff:g id="DEVICE_NAME">%1$s</xliff:g>."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Vincula un dispositiu nou"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"Bluetooth"</string>
-    <!-- no translation found for bluetooth_pair_right_ear_button (3979894494803078852) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_left_ear_button (1019938875726073791) -->
-    <skip />
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Vincula la dreta"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Vincula l\'esquerra"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Vincula l\'altra orella"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"L\'audiòfon esquerre està connectat.\n\nPer vincular el dret, comprova que estigui encès i a punt per vincular-se."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"L\'audiòfon dret està connectat.\n\nPer vincular l\'esquerre, comprova que estigui encès i a punt per vincular-se."</string>
@@ -2063,7 +2061,6 @@
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"Vols restablir les preferències de les aplicacions?"</string>
     <string name="reset_app_preferences_desc" msgid="8550782670650158299">"Es restabliran totes les preferències relacionades amb:\n\n"<li>"Les aplicacions desactivades"</li>\n<li>"Les notificacions d\'aplicacions desactivades"</li>\n<li>"Les aplicacions predeterminades per a accions"</li>\n<li>"Les restriccions de dades en segon pla per a aplicacions"</li>\n<li>"Qualsevol restricció de permisos"</li>\n<li>"La configuració d\'ús de la bateria"</li>\n\n"No es perdran les dades de les aplicacions."</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"Restableix aplicacions"</string>
-    <string name="manage_space_text" msgid="9013414693633572277">"Gestiona l\'espai"</string>
     <string name="filter" msgid="9039576690686251462">"Filtra"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"Selecció d\'opcions de filtre"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"Totes les aplicacions"</string>
@@ -2680,7 +2677,7 @@
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"Ús de la bateria"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"Consulta l\'ús de les 24 darreres hores"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"Mostra ús des de darrera càrrega completa"</string>
-    <string name="battery_details_title" msgid="4531369291819754178">"Ús de la bateria"</string>
+    <string name="battery_details_title" msgid="3289680399291090588">"Ús de la bateria de l\'aplicació"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"Detalls d\'ús"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"Redueix el consum de la bateria"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"Paquets inclosos"</string>
@@ -2699,8 +2696,10 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"És possible que algunes funcions estiguin limitades"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Major consum de bateria"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Mostra les aplicacions que més bateria utilitzen"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Càrrega limitada temporalment"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Per estalviar bateria. Obtén més informació."</string>
+    <string name="battery_tip_limited_temporarily_title" msgid="5962767837251276527">"La càrrega s\'ha posat en pausa"</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="4236185146380247801">"S\'està protegint la bateria per allargar-ne la durada.\nToca per obtenir més informació."</string>
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Reprèn la càrrega"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"En determinades condicions, com ara altes temperatures i llargs períodes de càrrega, pot ser que la càrrega de la bateria es limiti al <xliff:g id="PERCENT">%1$s</xliff:g> per mantenir el bon estat de la bateria.\n\nQuan finalitzin aquestes condicions, el telèfon tornarà a carregar-se de manera normal automàticament."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"En determinades condicions, com ara altes temperatures i llargs períodes de càrrega, pot ser que la càrrega de la bateria es limiti al <xliff:g id="PERCENT">%1$s</xliff:g> per mantenir el bon estat de la bateria.\n\nQuan finalitzin aquestes condicions, la tauleta tornarà a carregar-se de manera normal automàticament."</string>
@@ -2736,6 +2735,7 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Aquesta aplicació podrà utilitzar la bateria en segon pla, cosa que pot provocar que s\'esgoti abans del previst."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Suprimeix"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Cancel·la"</string>
+    <string name="battery_tip_charge_to_full_button" msgid="6701709034348116261">"Carrega completament"</string>
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Les teves aplicacions utilitzen una quantitat normal de bateria. Si n\'utilitzen massa, el telèfon et suggerirà mesures per evitar-ho.\n\nSi tens poca bateria, sempre pots activar l\'estalvi de bateria."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Les teves aplicacions utilitzen una quantitat normal de bateria. Si n\'utilitzen massa, la tauleta et suggerirà mesures per evitar-ho.\n\nSi tens poca bateria, sempre pots activar l\'estalvi de bateria."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Les teves aplicacions utilitzen una quantitat normal de bateria. Si n\'utilitzen massa, el dispositiu et suggerirà mesures per evitar-ho.\n\nSi tens poca bateria, sempre pots activar l\'estalvi de bateria."</string>
@@ -2780,7 +2780,6 @@
     <string name="battery_full_charge_last" msgid="465146408601016923">"Durada aproximada de la càrrega completa"</string>
     <string name="battery_footer_summary" msgid="8221691063048377342">"Les dades d\'ús de la bateria són aproximades i poden variar en funció de l\'ús."</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"Ús de la bateria"</string>
-    <string name="battery_detail_manage_title" msgid="7910805419446927887">"Gestiona l\'ús de la bateria"</string>
     <string name="battery_total_and_bg_usage" msgid="8266478675516886819">"<xliff:g id="TIME_0">^1</xliff:g> en total • <xliff:g id="TIME_1">^2</xliff:g> en segon pla\ndes de la darrera càrrega completa"</string>
     <string name="battery_total_and_bg_usage_24hr" msgid="2393832614028187281">"<xliff:g id="TIME_0">^1</xliff:g> en total • <xliff:g id="TIME_1">^2</xliff:g> en segon pla\ndurant les 24 darreres hores"</string>
     <string name="battery_total_and_bg_usage_with_period" msgid="2809037516933951047">"<xliff:g id="TIME_0">^1</xliff:g> en total • <xliff:g id="TIME_1">^2</xliff:g> en segon pla\nentre <xliff:g id="TIME_PERIOD">^3</xliff:g>"</string>
@@ -2849,6 +2848,8 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Les dades d\'ús de la bateria són aproximades i no es mesuren mentre el telèfon s\'està carregant."</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Les dades d\'ús de la bateria estaran disponibles quan hagis fet servir el telèfon durant unes hores."</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Gràfic de l\'ús de la bateria"</string>
+    <string name="daily_battery_usage_chart" msgid="4176059567682992686">"Gràfic de l\'ús diari de la bateria"</string>
+    <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"Gràfic de l\'ús de la bateria per hores"</string>
     <string name="process_stats_summary_title" msgid="502683176231281732">"Estadístiques sobre processos"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Estadístiques sobre els processos en execució"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Ús de la memòria"</string>
@@ -4673,8 +4674,8 @@
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"Activa ara"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"Desactiva ara"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"No s\'està fent servir l\'optimització de la bateria"</string>
-    <string name="app_battery_optimization_title" msgid="389653121998016466">"Gestiona l\'ús de la bateria"</string>
-    <string name="app_battery_optimization_summary" msgid="7864783556193427398">"Defineix l\'ús de la bateria per a les aplicacions"</string>
+    <string name="app_battery_usage_title" msgid="346558380609793334">"Ús de la bateria de les aplicacions"</string>
+    <string name="app_battery_usage_summary" msgid="6349965904306339539">"Defineix l\'ús de la bateria per a les aplicacions"</string>
     <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"Sense restriccions"</string>
     <string name="filter_battery_optimized_title" msgid="8236647176487754796">"Optimitzada"</string>
     <string name="filter_battery_restricted_title" msgid="5886859505802563232">"Restringida"</string>
@@ -5411,6 +5412,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"Multimèdia"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Fixa el reproductor multimèdia"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Per reprendre la reproducció ràpidament, el reproductor multimèdia continua obert a la configuració ràpida"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Mostra les recomanacions multimèdia"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"A partir de la teva activitat"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Amaga el reproductor"</string>
