--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -1376,7 +1376,7 @@
     <string name="dark_ui_title" msgid="3373976268671557416">"Λειτουργία χαμηλού φωτισμού"</string>
     <string name="dark_ui_auto_mode_title" msgid="9027528859262295099">"Πρόγραμμα"</string>
     <string name="dark_ui_auto_mode_never" msgid="3980412582267787662">"Δεν υπάρχει"</string>
-    <string name="dark_ui_auto_mode_auto" msgid="6658909029498623375">"Ενεργό από τη δύση ως το πρωι"</string>
+    <string name="dark_ui_auto_mode_auto" msgid="6658909029498623375">"Ενεργό από τη δύση ως το πρωί"</string>
     <string name="dark_ui_auto_mode_custom" msgid="3800138185265182170">"Ενεργοποίηση σε προσαρμ. ώρα"</string>
     <string name="dark_ui_auto_mode_custom_bedtime" msgid="8465023741946439266">"Ενεργοποιείται κατά την ώρα ύπνου"</string>
     <string name="dark_ui_status_title" msgid="3505119141437774329">"Κατάσταση"</string>
@@ -2061,7 +2061,6 @@
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"Επαναφ. προτιμ. εφαρμ;"</string>
     <string name="reset_app_preferences_desc" msgid="8550782670650158299">"Αυτή η ενέργεια θα επαναφέρει όλες τις προτιμήσεις για τα εξής:\n\n"<li>"Απενεργοποιημένες εφαρμογές"</li>\n<li>"Απενεργοποιημένες ειδοποιήσεις εφαρμογών"</li>\n<li>"Προεπιλεγμένες εφαρμογές για ενέργειες"</li>\n<li>"Περιορισμοί δεδομένων παρασκηνίου για εφαρμογές"</li>\n<li>"Περιορισμοί αδειών"</li>\n<li>"Ρυθμίσεις χρήσης μπαταρίας"</li>\n\n"Δεν θα χάσετε δεδομένα εφαρμογών."</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"Επαναφορά εφαρμογών"</string>
-    <string name="manage_space_text" msgid="9013414693633572277">"Διαχείριση χώρου"</string>
     <string name="filter" msgid="9039576690686251462">"Φίλτρο"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"Επιλογές φίλτρου"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"Όλες τις εφαρμογές"</string>
@@ -2321,7 +2320,7 @@
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"Πατήστε 3 φορές για εστίαση"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"Πατήστε ένα κουμπί για εστίαση"</string>
     <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"Μεγεθύνετε γρήγορα την οθόνη προκειμένου το περιεχόμενο να εμφανίζεται μεγαλύτερο"</string>
-    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;Για μεγέθυνση:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Χρησιμοποιήστε τη συντόμευση για να ξεκινήσετε τη μεγιστοποίηση&lt;br/&gt; {1,number,integer}. Πατήστε την οθόνη&lt;br/&gt; {2,number,integer}. Σύρετε 2 δάχτυλα για να μετακινηθείτε στην οθόνη&lt;br/&gt; {3,number,integer}. Πλησιάστε δύο δάχτυλα μεταξύ τους για προσαρμογή της εστίασης&lt;br/&gt; {4,number,integer}. Χρησιμοποιήσετε τη συντόμευση για να διακόψετε τη μεγιστοποίηση&lt;br/&gt;&lt;br/&gt; &lt;b&gt;Για προσωρινή μεγέθυνση:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Βεβαιωθείτε ότι ο τύπος μεγέθυνσης έχει οριστεί σε πλήρη οθόνη&lt;br/&gt; {1,number,integer}. Χρησιμοποιήστε τη συντόμευση για να ξεκινήσετε τη μεγιστοποίηση&lt;br/&gt; {2,number,integer}. Αγγίξτε παρατεταμένα οπουδήποτε στην οθόνη&lt;br/&gt; {3,number,integer}. Σύρετε το δάχτυλό σας για να μετακινηθείτε στην οθόνη&lt;br/&gt; {4,number,integer}. Σηκώστε το δάχτυλό σας για διακοπή της μεγιστοποίησης"</string>
+    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;Για μεγέθυνση:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Χρησιμοποιήστε τη συντόμευση για να ξεκινήσετε τη μεγιστοποίηση&lt;br/&gt; {1,number,integer}. Πατήστε την οθόνη&lt;br/&gt; {2,number,integer}. Σύρετε 2 δάχτυλα για να μετακινηθείτε στην οθόνη&lt;br/&gt; {3,number,integer}. Πλησιάστε δύο δάχτυλα μεταξύ τους για προσαρμογή της εστίασης&lt;br/&gt; {4,number,integer}. Χρησιμοποιήστε τη συντόμευση για να διακόψετε τη μεγιστοποίηση&lt;br/&gt;&lt;br/&gt; &lt;b&gt;Για προσωρινή μεγέθυνση:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Βεβαιωθείτε ότι ο τύπος μεγέθυνσης έχει οριστεί σε πλήρη οθόνη&lt;br/&gt; {1,number,integer}. Χρησιμοποιήστε τη συντόμευση για να ξεκινήσετε τη μεγιστοποίηση&lt;br/&gt; {2,number,integer}. Αγγίξτε παρατεταμένα οπουδήποτε στην οθόνη&lt;br/&gt; {3,number,integer}. Σύρετε το δάχτυλό σας για να μετακινηθείτε στην οθόνη&lt;br/&gt; {4,number,integer}. Σηκώστε το δάχτυλό σας για διακοπή της μεγιστοποίησης"</string>
     <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"Όταν η μεγέθυνση είναι ενεργοποιημένη, μπορείτε να μεγεθύνετε την οθόνη σας.\n\n"<b>"Για εστίαση "</b>", ανοίξτε τη μεγέθυνση και, στη συνέχεια, πατήστε οπουδήποτε στην οθόνη σας.\n"<ul><li>"Σύρετε 2 ή περισσότερα δάχτυλα για κύλιση"</li>\n<li>"Πλησιάστε 2 ή περισσότερα δάχτυλα για να προσαρμόσετε την εστίαση"</li></ul>\n\n<b>"Για προσωρινή εστίαση"</b>", ανοίξτε τη μεγέθυνση και, στη συνέχεια, αγγίξτε παρατεταμένα οπουδήποτε στην οθόνη.\n"<ul><li>"Σύρετε για να μετακινηθείτε στην οθόνη"</li>\n<li>"Ανασηκώστε το δάχτυλο για σμίκρυνση"</li></ul>\n\n"Δεν μπορείτε να κάνετε μεγέθυνση στο πληκτρολόγιο ή τη γραμμή πλοήγησης."</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"Σελίδα <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> από <xliff:g id="NUM_PAGES">%2$d</xliff:g>"</string>
     <string name="accessibility_tutorial_dialog_title_button" msgid="4681164949716215131">"Χρήση κουμπιού προσβασιμότητας για άνοιγμα"</string>
@@ -2510,7 +2509,7 @@
     <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"Αδυναμία αντίληψης πράσινου, δευτερανωμαλία"</string>
     <string name="daltonizer_mode_protanomaly_summary" msgid="4617032854982040748">"Αδυναμία αντίληψης κόκκινου, πρωτανωμαλία"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2428218320118180070">"Τριτανοπία"</string>
-    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Επιπλέον μείωση φωτεινότητας"</string>
+    <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Επιπλέον μείωση φωτ."</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Επιπλέον μείωση φωτεινότητας της οθόνης"</string>
     <string name="reduce_bright_colors_shortcut_title" msgid="495648157059202745">"Συντόμευση επιπλέον μείωσης φωτεινότητας"</string>
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"Πληρ. για επιπλέον μείωση φωτεινότ."</string>
@@ -2678,7 +2677,7 @@
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"Χρήση μπαταρίας"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"Προβολή χρήσης των τελευταίων 24 ωρών"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"Προβ. χρήσης από τελευταία πλήρη φόρτιση"</string>
-    <string name="battery_details_title" msgid="4531369291819754178">"Χρήση της μπαταρίας"</string>
+    <string name="battery_details_title" msgid="3289680399291090588">"Χρήση μπαταρίας εφαρμογής"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"Λεπτομέρειες χρήσης"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"Προσαρμογή χρήσης ισχύος"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"Συμπεριλαμβανόμενα πακέτα"</string>
@@ -2697,8 +2696,10 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Ορισμένες λειτουργίες μπορεί να είναι περιορισμένες"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Υψηλότερη χρήση μπαταρίας"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Εμφάνιση εφαρμογών με την πιο υψηλή χρήση"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Προσωρινός περιορισμός φόρτισης"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Για εξοικονόμηση μπαταρίας. Μάθετε περισσότερα."</string>
+    <string name="battery_tip_limited_temporarily_title" msgid="5962767837251276527">"Η φόρτιση τέθηκε σε παύση"</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="4236185146380247801">"Προστατεύσετε την μπαταρία για να παρατείνετε τη διάρκεια ζωής της\nΠατήστε για να μάθετε περισσότερα"</string>
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Συνέχιση φόρτισης"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Υπό συγκεκριμένες συνθήκες, όπως σε υψηλές θερμοκρασίες και κατά περιόδους φόρτισης μεγάλης διάρκειας, η φόρτιση μπορεί να περιορίζεται στο <xliff:g id="PERCENT">%1$s</xliff:g> για να διατηρηθεί η εύρυθμη λειτουργία της μπαταρίας.\n\nΌταν αυτές οι συνθήκες πάψουν να υφίστανται, το τηλέφωνό σας θα φορτιστεί αυτόματα φυσιολογικά."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Υπό συγκεκριμένες συνθήκες, όπως σε υψηλές θερμοκρασίες και κατά περιόδους φόρτισης μεγάλης διάρκειας, η φόρτιση μπορεί να περιορίζεται στο <xliff:g id="PERCENT">%1$s</xliff:g> για να διατηρηθεί η εύρυθμη λειτουργία της μπαταρίας.\n\nΌταν αυτές οι συνθήκες πάψουν να υφίστανται, το tablet σας θα φορτιστεί αυτόματα φυσιολογικά."</string>
@@ -2734,6 +2735,7 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Αυτή η εφαρμογή θα μπορεί να χρησιμοποιήσει μπαταρία στο παρασκήνιο. Η μπαταρία σας μπορεί να εξαντληθεί πιο σύντομα από το αναμενόμενο."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Κατάργηση"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Ακύρωση"</string>
+    <string name="battery_tip_charge_to_full_button" msgid="6701709034348116261">"Πλήρης φόρτιση"</string>
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Οι εφαρμογές σας χρησιμοποιούν κανονική ποσότητα μπαταρίας. Εάν οι εφαρμογές χρησιμοποιούν πάρα πολλή μπαταρία, το τηλέφωνό σας θα προτείνει ενέργειες που μπορείτε να εκτελέσετε.\n\nΜπορείτε πάντα να ενεργοποιήσετε την Εξοικονόμηση μπαταρίας εάν εξαντλείται η μπαταρία σας."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Οι εφαρμογές σας χρησιμοποιούν κανονική ποσότητα μπαταρίας. Εάν οι εφαρμογές χρησιμοποιούν πάρα πολλή μπαταρία, το tablet σας θα προτείνει ενέργειες που μπορείτε να εκτελέσετε.\n\nΜπορείτε πάντα να ενεργοποιήσετε την Εξοικονόμηση μπαταρίας εάν εξαντλείται η μπαταρία σας."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Οι εφαρμογές σας χρησιμοποιούν κανονική ποσότητα μπαταρίας. Εάν οι εφαρμογές χρησιμοποιούν πάρα πολλή μπαταρία, η συσκευή σας θα προτείνει ενέργειες που μπορείτε να εκτελέσετε.\n\nΜπορείτε πάντα να ενεργοποιήσετε την Εξοικονόμηση μπαταρίας εάν εξαντλείται η μπαταρία σας."</string>
@@ -2778,7 +2780,6 @@
     <string name="battery_full_charge_last" msgid="465146408601016923">"Η πλήρης φόρτιση διαρκεί περίπου"</string>
     <string name="battery_footer_summary" msgid="8221691063048377342">"Τα δεδομένα χρήσης μπαταρίας υπολογίζονται κατά προσέγγιση και μπορεί να αλλάξουν ανάλογα με τη χρήση."</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"Χρήση της μπαταρίας"</string>
-    <string name="battery_detail_manage_title" msgid="7910805419446927887">"Διαχείριση χρήσης μπαταρίας"</string>
     <string name="battery_total_and_bg_usage" msgid="8266478675516886819">"<xliff:g id="TIME_0">^1</xliff:g> συνολικά • <xliff:g id="TIME_1">^2</xliff:g> στο παρασκήνιο\nαπό την τελευταία πλήρη φόρτιση"</string>
     <string name="battery_total_and_bg_usage_24hr" msgid="2393832614028187281">"<xliff:g id="TIME_0">^1</xliff:g> συνολικά • <xliff:g id="TIME_1">^2</xliff:g> στο παρασκήνιο\nγια τις προηγούμενες 24 ώρες"</string>
     <string name="battery_total_and_bg_usage_with_period" msgid="2809037516933951047">"<xliff:g id="TIME_0">^1</xliff:g> συνολικά • <xliff:g id="TIME_1">^2</xliff:g> στο παρασκήνιο\nκατά το διάστημα <xliff:g id="TIME_PERIOD">^3</xliff:g>"</string>
@@ -2847,6 +2848,8 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Τα δεδομένα χρήσης μπαταρίας υπολογίζονται κατά προσέγγιση και όχι κατά τη φόρτιση του τηλεφώνου"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Τα δεδομένα χρήσης μπαταρίας θα είναι διαθέσιμα, αφού έχετε χρησιμοποιήσει το τηλέφωνό σας μερικές ώρες."</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Γράφημα χρήσης μπαταρίας"</string>
+    <string name="daily_battery_usage_chart" msgid="4176059567682992686">"Γράφημα ημερήσιας χρήσης μπαταρίας"</string>
+    <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"Γράφημα ωριαίας χρήσης μπαταρίας"</string>
     <string name="process_stats_summary_title" msgid="502683176231281732">"Στατιστικά στοιχεία διαδικασίας"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Χρήσιμα στατιστικά στοιχεία σχετικά με τις εκτελούμενες διαδικασίες"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Χρήση μνήμης"</string>
@@ -4671,8 +4674,8 @@
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"Ενεργοποίηση τώρα"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"Απενεργοποίηση τώρα"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"Δεν χρησιμοποιείται η βελτιστοποίηση μπαταρίας"</string>
-    <string name="app_battery_optimization_title" msgid="389653121998016466">"Διαχείριση χρήσης μπαταρίας"</string>
-    <string name="app_battery_optimization_summary" msgid="7864783556193427398">"Ορισμός χρήσης μπαταρίας για εφαρμογές"</string>
+    <string name="app_battery_usage_title" msgid="346558380609793334">"Χρήση μπαταρίας εφαρμογής"</string>
+    <string name="app_battery_usage_summary" msgid="6349965904306339539">"Ορισμός χρήσης μπαταρίας για εφαρμογές"</string>
     <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"Απεριόριστη"</string>
     <string name="filter_battery_optimized_title" msgid="8236647176487754796">"Βελτιστοποιημένη"</string>
     <string name="filter_battery_restricted_title" msgid="5886859505802563232">"Περιορισμένη"</string>
@@ -5409,6 +5412,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"Μέσα"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Καρφίτσωμα προγράμματος αναπαραγωγής μέσων"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Για γρήγορη συνέχιση της αναπαραγωγής, το πρόγραμμα αναπαραγωγής μέσων παραμένει ανοικτό στις Γρήγορες ρυθμίσεις"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Εμφάνιση προτάσεων μέσων"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Με βάση τη δραστηριότητά σας"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Απόκρυψη προγράμματος αναπαραγωγής"</string>
