--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -70,10 +70,8 @@
     <string name="bluetooth_disconnect_all_profiles" product="device" msgid="6944790936166852428">"તમારું ઉપકરણ <xliff:g id="DEVICE_NAME">%1$s</xliff:g>થી ડિસ્કનેક્ટ થઈ જશે."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"નવા ડિવાઇસ જોડો"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"બ્લૂટૂથ"</string>
-    <!-- no translation found for bluetooth_pair_right_ear_button (3979894494803078852) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_left_ear_button (1019938875726073791) -->
-    <skip />
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"જમણા કાનને જોડો"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"ડાબા કાનને જોડો"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"તમારા બીજા કાનનું જોડો"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"સાંભળવામાં મદદ આપતું તમારા ડાબા કાનનું યંત્ર કનેક્ટેડ છે.\n\nજમણા કાનના યંત્રનું જોડાણ કરવા માટે ખાતરી કરો કે તે ચાલુ કરેલું અને જોડાણ કરવા માટે તૈયાર હોય."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"સાંભળવામાં મદદ આપતું તમારા જમણા કાનનું યંત્ર કનેક્ટેડ છે.\n\nડાબા કાનના યંત્રનું જોડાણ કરવા માટે ખાતરી કરો કે તે ચાલુ કરેલું અને જોડાણ કરવા માટે તૈયાર હોય."</string>
@@ -2063,7 +2061,6 @@
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"ઍપ પસંદગીઓને રીસેટ કરીએ?"</string>
     <string name="reset_app_preferences_desc" msgid="8550782670650158299">"આમ કરવાથી આ બધી પસંદગીઓ રીસેટ થઈ જશે:\n\n"<li>"બંધ કરેલી ઍપ"</li>\n<li>"બંધ કરેલાં નોટિફિકેશન"</li>\n<li>"ક્રિયાઓ માટેની ડિફૉલ્ટ ઍપ્લિકેશનો"</li>\n<li>"ઍપ માટે બૅકગ્રાઉન્ડ ડેટાના પ્રતિબંધો"</li>\n<li>"કોઈપણ પરવાનગીના પ્રતિબંધો"</li>\n<li>"બૅટરીના વપરાશના સેટિંગ"</li>\n\n"તમે કોઈપણ ઍપનો ડેટા ગુમાવશો નહીં."</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"ઍપ ફરીથી સેટ કરો"</string>
-    <string name="manage_space_text" msgid="9013414693633572277">"સ્પેસ મેનેજ કરો"</string>
     <string name="filter" msgid="9039576690686251462">"ફિલ્ટર"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"ફિલ્ટર વિકલ્પો પસંદ કરો"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"બધી ઍપ"</string>
@@ -2432,7 +2429,7 @@
     <string name="accessibility_autoclick_shorter_desc" msgid="7631013255724544348">"ઓછો"</string>
     <string name="accessibility_autoclick_longer_desc" msgid="2566025502981487443">"વધુ"</string>
     <string name="accessibility_autoclick_seekbar_desc" msgid="8363959277814621118">"ઑટો ક્લિકનો સમય"</string>
-    <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"વાઇબ્રેશન અને સંવેદક"</string>
+    <string name="accessibility_vibration_settings_title" msgid="936301142478631993">"વાઇબ્રેશન અને હેપ્ટિક"</string>
     <string name="accessibility_vibration_settings_summary" msgid="3690308537483465527">"વિવિધ પ્રકારના વપરાશ માટે વાઇબ્રેશનની તીવ્રતા નિયંત્રિત કરો"</string>
     <string name="accessibility_vibration_settings_state_on" msgid="5566026932372832502">"ચાલુ છે"</string>
     <string name="accessibility_vibration_settings_state_off" msgid="7946588741954981703">"બંધ છે"</string>
@@ -2680,7 +2677,7 @@
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"બૅટરીનો વપરાશ"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"છેલ્લા 24 કલાકનો વપરાશ જુઓ"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"છેલ્લે પૂર્ણ ચાર્જ કર્યા પછીનો વપરાશ જુઓ"</string>
-    <string name="battery_details_title" msgid="4531369291819754178">"બૅટરી વપરાશ"</string>
+    <string name="battery_details_title" msgid="3289680399291090588">"ઍપ દ્વારા બૅટરીનો વપરાશ"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"વિગતોનો ઉપયોગ કરો"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"પાવર વપરાશ સમાયોજિત કરો"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"સમાવિષ્ટ પૅકેજીસ"</string>
@@ -2699,8 +2696,10 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"અમુક સુવિધાઓ મર્યાદિત હોઈ શકે છે"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"બૅટરીનો સૌથી વધુ વપરાશ"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"સૌથી વધુ વપરાતી હોય એવી ઍપ જુઓ"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"ચાર્જ કરવાનું થોડા સમય માટે મર્યાદિત કરવામાં આવ્યું છે"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"તમારી બૅટરીની જાળવણી માટે. વધુ જાણો."</string>
+    <string name="battery_tip_limited_temporarily_title" msgid="5962767837251276527">"ચાર્જિંગ થોભાવવામાં આવ્યું છે"</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="4236185146380247801">"બૅટરીની આવરદા વધારવા માટે, બૅટરીની સુરક્ષા કરી રહ્યાં છીએ\nવધુ જાણવા માટે ટૅપ કરો"</string>
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"ચાર્જ કરવાનું ફરી શરૂ કરો"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"ઉચ્ચ તાપમાન અને ચાર્જિંગની લાંબી અવધિ જેવી અમુક ચોક્કસ પરિસ્થિતિઓમાં, ચાર્જિંગ <xliff:g id="PERCENT">%1$s</xliff:g> સુધી મર્યાદિત હોઈ શકે છે જેથી બૅટરીની ક્ષમતાને જાળવી રાખવામાં સહાય કરી શકાય.\n\n"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"ઉચ્ચ તાપમાન અને ચાર્જિંગની લાંબી અવધિ જેવી અમુક ચોક્કસ પરિસ્થિતિઓમાં, ચાર્જિંગ <xliff:g id="PERCENT">%1$s</xliff:g> સુધી મર્યાદિત હોઈ શકે છે જેથી બૅટરીની ક્ષમતાને જાળવી રાખવામાં સહાય કરી શકાય.\n\nજ્યારે એ પરિસ્થિતિઓ સમાપ્ત થશે, ત્યારે ઑટોમૅટિક રીતે તમારું ટૅબ્લેટ સામાન્ય રીતે ચાર્જ થશે."</string>
@@ -2736,6 +2735,7 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"આ ઍપ બૅકગ્રાઉન્ડમાં બૅટરીનો વપરાશ કરી શકશે. તમારા ડિવાઇસની બૅટરી અપેક્ષા કરતાં વહેલા સમાપ્ત થઈ શકે છે."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"કાઢી નાખો"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"રદ કરો"</string>
+    <string name="battery_tip_charge_to_full_button" msgid="6701709034348116261">"પૂરી ચાર્જ કરો"</string>
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"તમારી બધી ઍપ બૅટરીનો વપરાશ સામાન્ય પ્રમાણમાં કરી રહી છે. જો તે બૅટરીનો ઘણો વધુ વપરાશ કરવા માંડશે, તો તમારો ફોન તમે શું ઍક્શન લઈ શકો તે સૂચવશે.\n\nજો તમારી પાસે બૅટરીમાં ચાર્જ ઓછો રહ્યો હોય, તો તમે કોઈપણ સમયે બૅટરી સેવર ચાલુ કરી શકો છો."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"તમારી બધી ઍપ બૅટરીનો વપરાશ સામાન્ય પ્રમાણમાં કરી રહી છે. જો તે બૅટરીનો ઘણો વધુ વપરાશ કરવા માંડશે, તો તમારું ટૅબ્લેટ તમે શું ઍક્શન લઈ શકો તે સૂચવશે.\n\nજો તમારી પાસે બૅટરીમાં ચાર્જ ઓછો રહ્યો હોય, તો તમે કોઈપણ સમયે બૅટરી સેવર ચાલુ કરી શકો છો."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"તમારી બધી ઍપ બૅટરીનો વપરાશ સામાન્ય પ્રમાણમાં કરી રહી છે. જો તે બૅટરીનો ઘણો વધુ વપરાશ કરવા માંડશે, તો તમારું ઉપકરણ તમે શું ઍક્શન લઈ શકો તે સૂચવશે.\n\nજો તમારી પાસે બૅટરીમાં ચાર્જ ઓછો રહ્યો હોય, તો તમે કોઈપણ સમયે બૅટરી સેવર ચાલુ કરી શકો છો."</string>
@@ -2780,7 +2780,6 @@
     <string name="battery_full_charge_last" msgid="465146408601016923">"સંપૂર્ણ ચાર્જ લગભગ આટલો સમય ચાલે છે"</string>
     <string name="battery_footer_summary" msgid="8221691063048377342">"બૅટરી વપરાશનો ડેટા અનુમાનિત છે અને વપરાશના આધારે તે બદલાઈ શકે છે."</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"બૅટરી વપરાશ"</string>
-    <string name="battery_detail_manage_title" msgid="7910805419446927887">"બૅટરી વપરાશ મેનેજ કરો"</string>
     <string name="battery_total_and_bg_usage" msgid="8266478675516886819">"કુલ <xliff:g id="TIME_0">^1</xliff:g> • છેલ્લે પૂર્ણ ચાર્જ કરાયા પછી\nબૅકગ્રાઉન્ડમાં <xliff:g id="TIME_1">^2</xliff:g> વપરાશ થયો"</string>
     <string name="battery_total_and_bg_usage_24hr" msgid="2393832614028187281">"કુલ <xliff:g id="TIME_0">^1</xliff:g> • છેલ્લા 24 કલાકમાં\nબૅકગ્રાઉન્ડમાં <xliff:g id="TIME_1">^2</xliff:g> વપરાશ થયો"</string>
     <string name="battery_total_and_bg_usage_with_period" msgid="2809037516933951047">"બૅટરીનો કુલ વપરાશ <xliff:g id="TIME_0">^1</xliff:g> થયો • <xliff:g id="TIME_PERIOD">^3</xliff:g> દરમિયાન બૅટરીનો <xliff:g id="TIME_1">^2</xliff:g> બૅકગ્રાઉન્ડમાં\n વપરાશ થયો"</string>
@@ -2849,6 +2848,8 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"બૅટરીના વપરાશનો ડેટા અંદાજિત છે અને જ્યારે ફોન ચાર્જ થઈ રહ્યો હોય, ત્યારે તેના વપરાશની ગણતરી કરવામાં આવતી નથી"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"તમે તમારા ફોનનો થોડા કલાક માટે ઉપયોગ કરશો પછી બૅટરીના વપરાશનો ડેટા ઉપલબ્ધ થશે"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"બૅટરીના વપરાશનો ચાર્ટ"</string>
+    <string name="daily_battery_usage_chart" msgid="4176059567682992686">"બૅટરીના દૈનિક વપરાશનો ચાર્ટ"</string>
+    <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"બૅટરીના કલાક દીઠ વપરાશનો ચાર્ટ"</string>
     <string name="process_stats_summary_title" msgid="502683176231281732">"પ્રક્રિયા આંકડા"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"ચાલુ પ્રક્રિયાઓ વિશેનાં અવ્યવસ્થિત આંકડાઓ"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"મેમરીનો ઉપયોગ"</string>
@@ -3239,7 +3240,7 @@
     <string name="user_summary_not_set_up" msgid="4602868481732886115">"સેટ કરેલ નથી"</string>
     <string name="user_summary_restricted_not_set_up" msgid="1658946988920104613">"સેટ કરેલ નથી - પ્રતિબંધિત પ્રોફાઇલ"</string>
     <string name="user_summary_managed_profile_not_set_up" msgid="5739207307082458746">"સેટ કરેલ નથી - કાર્યાલયની પ્રોફાઇલ"</string>
-    <string name="user_admin" msgid="4024553191395768119">"એડમિન"</string>
+    <string name="user_admin" msgid="4024553191395768119">"ઍડમિન"</string>
     <string name="user_you" msgid="3070562015202859996">"તમે (<xliff:g id="NAME">%s</xliff:g>)"</string>
     <string name="user_add_max_count" msgid="3328539978480663740">"તમે હજી વધુ વપરાશકર્તાઓ ઉમેરી શકશો નહીં. નવા વપરાશકર્તા ઉમેરવા માટે કોઈ એક વપરાશકર્તાને કાઢી નાખો."</string>
     <string name="user_cannot_manage_message" product="tablet" msgid="3405022988077682357">"માત્ર ટૅબ્લેટના માલિક વપરાશકર્તાને મેનેજ કરી શકે છે."</string>
@@ -4673,8 +4674,8 @@
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"હમણાં ચાલુ કરો"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"હમણાં બંધ કરો"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"બૅટરી ઓપ્ટિમાઇઝેશનનો ઉપયોગ કરી રહ્યાં નથી"</string>
-    <string name="app_battery_optimization_title" msgid="389653121998016466">"બૅટરીનો વપરાશ મેનેજ કરો"</string>
-    <string name="app_battery_optimization_summary" msgid="7864783556193427398">"ઍપ માટે બૅટરીનો વપરાશ સેટ કરો"</string>
+    <string name="app_battery_usage_title" msgid="346558380609793334">"ઍપ દ્વારા બૅટરીનો વપરાશ"</string>
+    <string name="app_battery_usage_summary" msgid="6349965904306339539">"ઍપ માટે બૅટરીનો વપરાશ સેટ કરો"</string>
     <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"અમર્યાદિત"</string>
     <string name="filter_battery_optimized_title" msgid="8236647176487754796">"ઑપ્ટિમાઇઝ કરેલી બૅટરી"</string>
     <string name="filter_battery_restricted_title" msgid="5886859505802563232">"મર્યાદિત"</string>
@@ -5411,6 +5412,8 @@
     <string name="media_controls_title" msgid="403271085636252597">"મીડિયા"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"મીડિયા પ્લેયર પિન કરો"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"પ્લેબૅક ઝડપથી ફરી શરૂ કરી શકવા માટે, મીડિયા પ્લેયર ઝડપી સેટિંગમાં ખુલ્લું રહે છે"</string>
+    <string name="media_controls_lockscreen_title" msgid="2188311721857512510">"લૉક સ્ક્રીન પર મીડિયા બતાવો"</string>
+    <string name="media_controls_lockscreen_description" msgid="3320333660404439510">"પ્લેબૅક ઝડપથી ફરી શરૂ કરવા માટે, મીડિયા પ્લેયર લૉક સ્ક્રીન પર ખુલ્લું રહે છે"</string>
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"મીડિયાના સુઝાવો બતાવો"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"તમારી પ્રવૃત્તિ પર આધારિત"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"પ્લેયર છુપાવો"</string>
