--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -70,10 +70,8 @@
     <string name="bluetooth_disconnect_all_profiles" product="device" msgid="6944790936166852428">"Ձեր սարքը կանջատվի <xliff:g id="DEVICE_NAME">%1$s</xliff:g> սարքից:"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Նոր սարքի զուգակցում"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
-    <!-- no translation found for bluetooth_pair_right_ear_button (3979894494803078852) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_left_ear_button (1019938875726073791) -->
-    <skip />
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Զուգակցել աջ ականջը"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Զուգակցել ձախ ականջը"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Զուգակցեք մյուս ականջը"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"Ձեր ձախ լսողական սարքը զուգակցված է։\n\nԱջը զուգակցելու համար համոզվեք, որ այն միացված է և պատրաստ զուգակցման։"</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"Ձեր աջ լսողական սարքը զուգակցված է։\n\nՁախը զուգակցելու համար համոզվեք, որ այն միացված է և պատրաստ զուգակցման։"</string>
@@ -574,7 +572,7 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Հեռացնե՞լ բոլոր մատնահետքերը"</string>
     <string name="fingerprint_delete_title" msgid="1469865327307917858">"Հեռացնե՞լ <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> մատնահետքը"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Ջնջե՞լ այս մատնահետքը։"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» մատնահետքի հետ կապված պատկերներն ու նմուշը, որոնք պահված են ձեր սարքում, կջնջվեն"</string>
+    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» մատնահետքի պատկերներն ու նմուշը, որոնք պահված են ձեր սարքում, կջնջվեն"</string>
     <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Դուք չեք կարողանա օգտագործել ձեր մատնահետքը՝ հեռախոսն ապակողպելու կամ հավելվածներում ձեր ինքնությունը հաստատելու համար։"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Դուք չեք կարողանա օգտագործել ձեր մատնահետքը՝ աշխատանքային պրոֆիլն ապակողպելու, գնումները հաստատելու կամ աշխատանքային հավելվածներ մուտք գործելու համար։"</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Այո, հեռացնել"</string>
@@ -1447,8 +1445,7 @@
     <string name="sim_enter_new" msgid="9010947802784561582">"Նոր SIM քարտի PIN կոդը"</string>
     <string name="sim_reenter_new" msgid="6131418271490374263">"Նորից մուտքագրեք նոր PIN-ը"</string>
     <string name="sim_change_pin" msgid="1104103818545005448">"SIM PIN"</string>
-    <!-- no translation found for sim_invalid_pin_hint (3376397829969578877) -->
-    <skip />
+    <string name="sim_invalid_pin_hint" msgid="3376397829969578877">"Մուտքագրեք 4–8 թվանշան պարունակող PIN"</string>
     <string name="sim_pins_dont_match" msgid="1540348773896609260">"PIN-երը չեն համընկնում"</string>
     <string name="sim_change_failed" msgid="316723087029061740">"Չհաջողվեց փոխել PIN-ը:\nՀնարավոր է՝ PIN-ը սխալ է:"</string>
     <string name="sim_change_succeeded" msgid="3516905528149069739">"SIM քարտի PIN կոդը հաջողությամբ փոխվել է"</string>
@@ -2064,7 +2061,6 @@
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"Զրոյացնե՞լ կարգավորումները"</string>
     <string name="reset_app_preferences_desc" msgid="8550782670650158299">"Հետևյալ կարգավորումները կզրոյանան՝\n\n"<li>"Անջատված հավելվածները"</li>\n<li>"Հավելվածների անջատված ծանուցումները"</li>\n<li>"Գործողությունների համար կանխադրված հավելվածները"</li>\n<li>"Ֆոնային ռեժիմում տվյալների փոխանակման սահմանափակումները հավելվածների համար"</li>\n<li>"Թույլտվությունների բոլոր սահմանափակումները"</li>\n<li>"Մարտկոցի օգտագործման կարգավորումները"</li>\n\n"Դուք չեք կորցնի հավելվածների ոչ մի տվյալ։"</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"Զրոյացնել"</string>
-    <string name="manage_space_text" msgid="9013414693633572277">"Կառավարել տարածքը"</string>
     <string name="filter" msgid="9039576690686251462">"Զտիչ"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"Ընտրել զտիչի ընտրանքները"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"Բոլոր հավելվածները"</string>
@@ -2681,7 +2677,8 @@
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"Մարտկոցի օգտագործում"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"Դիտեք վերջին 24 ժամվա տվյալները"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"Սպառումը վերջին լրիվ լիցքավորումից հետո"</string>
-    <string name="battery_details_title" msgid="4531369291819754178">"Մարտկոցի օգտագործում"</string>
+    <!-- no translation found for battery_details_title (3289680399291090588) -->
+    <skip />
     <string name="details_subtitle" msgid="2550872569652785527">"Օգտագործման մանրամասները"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"Կարգավորել հոսանքի օգտագործումը"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"Ներառված փաթեթները"</string>
@@ -2700,8 +2697,12 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Որոշ գործառույթներ կարող են պատշաճ չաշխատել"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Մարտկոցի լիցքի բարձր ծախսում"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Տեսեք, թե որ հավելվածներն են ամենաշատը օգտագործում մարտկոցի լիցքը"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Լիցքավորումը ժամանակավորապես սահմանափակված է"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Մարտկոցի կյանքը երկարացնելու համար։ Իմանալ ավելին։"</string>
+    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Վերսկսել լիցքավորումը"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Որոշակի պայմաններում, օրինակ՝ բարձր ջերմաստիճանի կամ երկար լիցքավորման դեպքում, համակարգը կարող է սահմանափակել լիցքավորումը <xliff:g id="PERCENT">%1$s</xliff:g>-ով՝ մարտկոցի ծառայության ժամկետը երկարացնելու համար։\n\nԵրբ պայմանները կարգավորվեն, հեռախոսն ավտոմատ կերպով կլիցքավորվի սովորական եղանակով։"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Որոշակի պայմաններում, օրինակ՝ բարձր ջերմաստիճանի կամ երկար լիցքավորման դեպքում, համակարգը կարող է սահմանափակել լիցքավորումը <xliff:g id="PERCENT">%1$s</xliff:g>-ով՝ մարտկոցի ծառայության ժամկետը երկարացնելու համար։\n\nԵրբ պայմանները կարգավորվեն, պլանշետն ավտոմատ կերպով կլիցքավորվի սովորական եղանակով։"</string>
@@ -2737,6 +2738,8 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Այս հավելվածը կկարողանա օգտագործել մարտկոցը ֆոնային ռեժիմում, ինչի պատճառով դրա լիցքը կարող է ավելի շուտ սպառվել:"</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Ջնջել"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Չեղարկել"</string>
+    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
+    <skip />
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Ձեր հավելվածները մարտկոցի լիցքն օգտագործում են սովորական ծավալով։ Եթե դրանք չափից շատ սպառեն մարտկոցի լիցքը, հեռախոսը ձեզ կառաջարկի համապատասխան գործողություններ ձեռնարկել։\n\nԴուք ցանկացած ժամանակ կարող եք միացնել մարտկոցի տնտեսման ռեժիմը։"</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Ձեր հավելվածները մարտկոցի լիցքն օգտագործում են սովորական ծավալով։ Եթե դրանք չափից շատ սպառեն մարտկոցի լիցքը, պլանշետը ձեզ կառաջարկի համապատասխան գործողություններ ձեռնարկել։\n\nԴուք ցանկացած ժամանակ կարող եք միացնել մարտկոցի տնտեսման ռեժիմը։"</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Ձեր հավելվածները մարտկոցի լիցքն օգտագործում են սովորական ծավալով։ Եթե դրանք չափից շատ սպառեն մարտկոցի լիցքը, սարքը ձեզ կառաջարկի համապատասխան գործողություններ ձեռնարկել։\n\nԴուք ցանկացած ժամանակ կարող եք միացնել մարտկոցի տնտեսման ռեժիմը։"</string>
@@ -2781,7 +2784,6 @@
     <string name="battery_full_charge_last" msgid="465146408601016923">"Լրիվ լիցքավորումը կբավականացնի մոտ"</string>
     <string name="battery_footer_summary" msgid="8221691063048377342">"Մարտկոցի օգտագործման տվյալները մոտավոր են և կարող են փոխվել՝ օգտագործումից կախված։"</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"Մարտկոցի օգտագործում"</string>
-    <string name="battery_detail_manage_title" msgid="7910805419446927887">"Մարտկոցի օգտագործման կառավարում"</string>
     <string name="battery_total_and_bg_usage" msgid="8266478675516886819">"Ընդհանուր՝ <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> ֆոնային ռեժիմում՝\nվերջին լրիվ լիցքավորումից հետո"</string>
     <string name="battery_total_and_bg_usage_24hr" msgid="2393832614028187281">"Ընդհանուր՝ <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> ֆոնային ռեժիմում՝\nվերջին 24 ժամվա ընթացքում"</string>
     <string name="battery_total_and_bg_usage_with_period" msgid="2809037516933951047">"Ընդհանուր <xliff:g id="TIME_0">^1</xliff:g> • <xliff:g id="TIME_1">^2</xliff:g> ֆոնային ռեժիմում \n<xliff:g id="TIME_PERIOD">^3</xliff:g> ժամանակահատվածում"</string>
@@ -2835,14 +2837,11 @@
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"մատկոցի <xliff:g id="PERCENT">%1$s</xliff:g> լիցքի դեպքում"</string>
     <string name="battery_percentage" msgid="1779934245963043490">"Մարտկոցի լիցքը"</string>
     <string name="battery_percentage_description" msgid="2321465139126125541">"Մարտկոցի տոկոսը ցուցադրել կարգավիճակի գոտում"</string>
-    <!-- no translation found for battery_usage_chart_graph_hint_last_full_charge (6570336408060566877) -->
-    <skip />
+    <string name="battery_usage_chart_graph_hint_last_full_charge" msgid="6570336408060566877">"Մարտկոցի լիցքի մակարդակը վերջին լրիվ լիցքավորումից հետո"</string>
     <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"Մարտկոցի լիցքի մակարդակը վերջին 24 ժամվա ընթացքում"</string>
-    <!-- no translation found for battery_app_usage (8976453608783133770) -->
-    <skip />
+    <string name="battery_app_usage" msgid="8976453608783133770">"Հավելվածի օգտագործումը վերջին լրիվ լիցքավորումից հետո"</string>
     <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"Հավելվածների կողմից մարտկոցի օգտագործումը վերջին 24 ժամվա ընթացքում"</string>
-    <!-- no translation found for battery_system_usage (1395943945140097585) -->
-    <skip />
+    <string name="battery_system_usage" msgid="1395943945140097585">"Համակարգի օգտագործումը վերջին լրիվ լիցքավորումից հետո"</string>
     <string name="battery_system_usage_for_past_24" msgid="3341520273114616263">"Համակարգի կողմից մարտկոցի օգտագործումը վերջին 24 ժամվա ընթացքում"</string>
     <string name="battery_system_usage_for" msgid="3248552137819897140">"Համակարգի կողմից մարտկոցի օգտագործումը (<xliff:g id="SLOT">%s</xliff:g>)"</string>
     <string name="battery_app_usage_for" msgid="7309909074935858949">"Հավելվածների կողմից մարտկոցի օգտագործումը (<xliff:g id="SLOT">%s</xliff:g>)"</string>
@@ -2853,6 +2852,10 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Մարտկոցի օգտագործման տվյալները մոտավոր են և չեն ցուցադրվում հեռախոսի լիցքավորման ժամանակ"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Մարտկոցի օգտագործման տվյալները հասանելի կլինեն, երբ մի քանի ժամ օգտագործեք ձեր հեռախոսը"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Մարտկոցի օգտագործման գծապատկեր"</string>
+    <!-- no translation found for daily_battery_usage_chart (4176059567682992686) -->
+    <skip />
+    <!-- no translation found for hourly_battery_usage_chart (3098314511076561272) -->
+    <skip />
     <string name="process_stats_summary_title" msgid="502683176231281732">"Գործընթացի վիճակագրություն"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"Ընթացիկ գործընթացների տեխնիկական վիճակագրություն"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"Օգտագործվող հիշողություն"</string>
@@ -4677,16 +4680,13 @@
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"Միացնել հիմա"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"Անջատել հիմա"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"Մարտկոցի օպտիմալացումը չի օգտագործվում"</string>
-    <!-- no translation found for app_battery_optimization_title (389653121998016466) -->
+    <!-- no translation found for app_battery_usage_title (346558380609793334) -->
     <skip />
-    <!-- no translation found for app_battery_optimization_summary (7864783556193427398) -->
+    <!-- no translation found for app_battery_usage_summary (6349965904306339539) -->
     <skip />
-    <!-- no translation found for filter_battery_unrestricted_title (821027369424198223) -->
-    <skip />
-    <!-- no translation found for filter_battery_optimized_title (8236647176487754796) -->
-    <skip />
-    <!-- no translation found for filter_battery_restricted_title (5886859505802563232) -->
-    <skip />
+    <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"Անսահմանափակ"</string>
+    <string name="filter_battery_optimized_title" msgid="8236647176487754796">"Օպտիմալացված"</string>
+    <string name="filter_battery_restricted_title" msgid="5886859505802563232">"Սահմանափակ"</string>
     <string name="lockscreen_remote_input" msgid="6030274311185811503">"Արգելել ծանուցումներում պատասխանների կամ այլ տեքստերի մուտքագրումը, երբ սարքը կողպված է"</string>
     <string name="default_spell_checker" msgid="7108373288347014351">"Կանխադրված ուղղագրիչ"</string>
     <string name="choose_spell_checker" msgid="7402513404783243675">"Ընտրեք ուղղագրիչը"</string>
@@ -4989,7 +4989,7 @@
     <string name="storage_videos" msgid="6117698226447251033">"Տեսանյութեր"</string>
     <string name="storage_audio" msgid="5994664984472140386">"Աուդիո"</string>
     <string name="storage_apps" msgid="3564291603258795216">"Հավելվածներ"</string>
-    <string name="storage_documents_and_other" msgid="3293689243732236480">"Փաստաթղթեր և այլ նյութեր"</string>
+    <string name="storage_documents_and_other" msgid="3293689243732236480">"Փաստաթղթեր և այլ ֆայլեր"</string>
     <string name="storage_system" msgid="8472410119822911844">"Համակարգ"</string>
     <string name="storage_trash" msgid="2807138998886084856">"Աղբարկղ"</string>
     <string name="storage_trash_dialog_title" msgid="2296169576049935200">"Դատարկե՞լ աղբարկղը"</string>
@@ -5420,6 +5420,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"Մեդիա"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"Ամրացնել մեդիա նվագարկիչը"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"Մեդիա նվագարկիչը բաց է մնում Արագ կարգավորումներում, որպեսզի դուք կարողանաք անմիջապես վերսկսել նվագարկումը։"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"Ցույց տալ մեդիա բովանդակության առաջարկներ"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"Ձեր գործողությունների հիման վրա"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"Թաքցնել նվագարկիչը"</string>
