--- a/res/values-pa/strings.xml
+++ b/res/values-pa/strings.xml
@@ -70,10 +70,8 @@
     <string name="bluetooth_disconnect_all_profiles" product="device" msgid="6944790936166852428">"ਤੁਹਾਡਾ ਡੀਵਾਈਸ <xliff:g id="DEVICE_NAME">%1$s</xliff:g> ਤੋਂ ਡਿਸਕਨੈਕਟ ਹੋ ਜਾਵੇਗਾ।"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"ਨਵਾਂ ਡੀਵਾਈਸ ਜੋੜਾਬੱਧ ਕਰੋ"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"ਬਲੂਟੁੱਥ"</string>
-    <!-- no translation found for bluetooth_pair_right_ear_button (3979894494803078852) -->
-    <skip />
-    <!-- no translation found for bluetooth_pair_left_ear_button (1019938875726073791) -->
-    <skip />
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"ਸੱਜਾ ਕੰਨ ਜੋੜਾਬੱਧ ਕਰੋ"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"ਖੱਬਾ ਕੰਨ ਜੋੜਾਬੱਧ ਕਰੋ"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"ਆਪਣਾ ਦੂਜਾ ਕੰਨ ਜੋੜਾਬੱਧ ਕਰੋ"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"ਤੁਹਾਡਾ ਖੱਬਾ ਸੁਣਨ ਦਾ ਸਾਧਨ ਕਨੈਕਟ ਹੈ।\n\nਸੱਜੇ ਨੂੰ ਜੋੜਾਬੱਧ ਕਰਨ ਲਈ, ਪੱਕਾ ਕਰੋ ਕਿ ਇਹ ਚਾਲੂ ਹੈ ਅਤੇ ਜੋੜਾਬੱਧ ਕਰਨ ਲਈ ਤਿਆਰ ਹੈ।"</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"ਤੁਹਾਡਾ ਸੱਜਾ ਸੁਣਨ ਦਾ ਸਾਧਨ ਕਨੈਕਟ ਹੈ।\n\nਖੱਬੇ ਨੂੰ ਜੋੜਾਬੱਧ ਕਰਨ ਲਈ, ਪੱਕਾ ਕਰੋ ਕਿ ਇਹ ਚਾਲੂ ਹੈ ਅਤੇ ਜੋੜਾਬੱਧ ਕਰਨ ਲਈ ਤਿਆਰ ਹੈ।"</string>
@@ -2063,7 +2061,6 @@
     <string name="reset_app_preferences_title" msgid="8935136792316050759">"ਕੀ ਐਪ ਤਰਜੀਹਾਂ ਰੀਸੈੱਟ ਕਰਨੀਆਂ ਹਨ?"</string>
     <string name="reset_app_preferences_desc" msgid="8550782670650158299">"ਇਹ ਹੇਠਲੀਆਂ ਸਾਰੀਆਂ ਤਰਜੀਹਾਂ ਨੂੰ ਰੀਸੈੱਟ ਕਰ ਦੇਵੇਗਾ:\n\n"<li>"ਬੰਦ ਕੀਤੀਆਂ ਐਪਾਂ"</li>\n<li>"ਬੰਦ ਕੀਤੀਆਂ ਐਪ ਸੂਚਨਾਵਾਂ"</li>\n<li>"ਕਾਰਵਾਈਆਂ ਲਈ ਪੂਰਵ-ਨਿਰਧਾਰਿਤ ਐਪਲੀਕੇਸ਼ਨਾਂ"</li>\n<li>"ਐਪਾਂ ਲਈ ਬੈਕਗ੍ਰਾਊਂਡ ਡਾਟੇ ਸੰਬੰਧੀ ਪਾਬੰਦੀਆਂ"</li>\n<li>"ਕੋਈ ਵੀ ਇਜਾਜ਼ਤ ਸੰਬੰਧੀ ਪਾਬੰਦੀਆਂ"</li>\n<li>"ਬੈਟਰੀ ਵਰਤੋਂ ਸੰਬੰਧੀ ਸੈਟਿੰਗਾਂ"</li>\n\n"ਤੁਸੀਂ ਕੋਈ ਵੀ ਐਪ ਡਾਟਾ ਨਹੀਂ ਗੁਆਓਗੇ।"</string>
     <string name="reset_app_preferences_button" msgid="2591318711372850058">"ਐਪਾਂ ਰੀਸੈੱਟ ਕਰੋ"</string>
-    <string name="manage_space_text" msgid="9013414693633572277">"ਜਗ੍ਹਾ ਵਿਵਸਥਿਤ ਕਰੋ"</string>
     <string name="filter" msgid="9039576690686251462">"ਫਿਲਟਰ"</string>
     <string name="filter_dlg_title" msgid="3086282431958601338">"ਫਿਲਟਰ ਵਿਕਲਪ ਚੁਣੋ"</string>
     <string name="filter_apps_all" msgid="5705421199299914620">"ਸਾਰੀਆਂ ਐਪਾਂ"</string>
@@ -2680,7 +2677,7 @@
     <string name="advanced_battery_preference_title" msgid="3790901207877260883">"ਬੈਟਰੀ ਵਰਤੋਂ"</string>
     <string name="advanced_battery_preference_summary_with_hours" msgid="954091349133320955">"ਪਿਛਲੇ 24 ਘੰਟਿਆਂ ਦੌਰਾਨ ਹੋਈ ਵਰਤੋਂ ਦੇਖੋ"</string>
     <string name="advanced_battery_preference_summary" msgid="6088389774708000305">"ਪਿਛਲੇ ਪੂਰੇ ਚਾਰਜ ਤੋਂ ਬਾਅਦ ਹੋਈ ਵਰਤੋਂ ਦੇਖੋ"</string>
-    <string name="battery_details_title" msgid="4531369291819754178">"ਬੈਟਰੀ ਵਰਤੋਂ"</string>
+    <string name="battery_details_title" msgid="3289680399291090588">"ਐਪ ਬੈਟਰੀ ਵਰਤੋਂ"</string>
     <string name="details_subtitle" msgid="2550872569652785527">"ਵਰਤੋਂ ਵੇਰਵੇ"</string>
     <string name="controls_subtitle" msgid="3759606830916441564">"ਪਾਵਰ ਵਰਤੋਂ ਵਿਵਸਥਿਤ ਕਰੋ"</string>
     <string name="packages_subtitle" msgid="8687690644931499428">"ਸ਼ਾਮਲ ਕੀਤੇ ਪੈਕੇਜ"</string>
@@ -2699,8 +2696,10 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"ਕੁਝ ਵਿਸ਼ੇਸ਼ਤਾਵਾਂ ਦੀ ਵਰਤੋਂ ਸੀਮਤ ਹੋ ਸਕਦੀ ਹੈ"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"ਬੈਟਰੀ ਦੀ ਜ਼ਿਆਦਾ ਵਰਤੋਂ"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"ਸਭ ਤੋਂ ਵੱਧ ਬੈਟਰੀ ਵਰਤੋਂ ਵਾਲੀਆਂ ਐਪਾਂ ਦੇਖੋ"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"ਚਾਰਜਿੰਗ ਕੁਝ ਸਮੇਂ ਲਈ ਰੋਕੀ ਗਈ"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"ਤੁਹਾਡੀ ਬੈਟਰੀ ਨੂੰ ਬਚਾਉਣ ਲਈ। ਹੋਰ ਜਾਣੋ।"</string>
+    <string name="battery_tip_limited_temporarily_title" msgid="5962767837251276527">"ਚਾਰਜਿੰਗ ਨੂੰ ਰੋਕਿਆ ਗਿਆ ਹੈ"</string>
+    <string name="battery_tip_limited_temporarily_summary" msgid="4236185146380247801">"ਬੈਟਰੀ ਦੀ ਜੀਵਨ ਮਿਆਦ ਨੂੰ ਵਧਾਉਣ ਲਈ ਬੈਟਰੀ ਨੂੰ ਸੁਰੱਖਿਅਤ ਕਰਨਾ\nਹੋਰ ਜਾਣਨ ਲਈ ਟੈਪ ਕਰੋ"</string>
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"ਚਾਰਜਿੰਗ ਮੁੜ-ਚਾਲੂ ਕਰੋ"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"ਕੁਝ ਵਿਸ਼ੇਸ਼ ਹਾਲਾਤਾਂ ਵਿੱਚ, ਜਿਵੇਂ ਕਿ ਉੱਚ ਤਾਪਮਾਨ ਅਤੇ ਲੰਮੇ ਸਮੇਂ ਤੱਕ ਚਾਰਜ ਕਰਨਾ, ਬੈਟਰੀ ਦੀ ਕਾਰਗੁਜ਼ਾਰੀ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਲਈ, ਸ਼ਾਇਦ ਚਾਰਜਿੰਗ <xliff:g id="PERCENT">%1$s</xliff:g> ਤੱਕ ਸੀਮਤ ਹੋ ਸਕਦੀ ਹੈ।\n\nਉਨ੍ਹਾਂ ਹਾਲਾਤਾਂ ਦੇ ਸਮਾਪਤ ਹੋਣ \'ਤੇ, ਤੁਹਾਡਾ ਫ਼ੋਨ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਸਧਾਰਨ ਤਰੀਕੇ ਨਾਲ ਚਾਰਜ ਹੋ ਜਾਵੇਗਾ।"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"ਕੁਝ ਵਿਸ਼ੇਸ਼ ਹਾਲਾਤਾਂ ਵਿੱਚ, ਜਿਵੇਂ ਕਿ ਉੱਚ ਤਾਪਮਾਨ ਅਤੇ ਲੰਮੇ ਸਮੇਂ ਤੱਕ ਚਾਰਜ ਕਰਨਾ, ਬੈਟਰੀ ਦੀ ਕਾਰਗੁਜ਼ਾਰੀ ਨੂੰ ਬਿਹਤਰ ਬਣਾਉਣ ਲਈ, ਸ਼ਾਇਦ ਚਾਰਜਿੰਗ <xliff:g id="PERCENT">%1$s</xliff:g> ਤੱਕ ਸੀਮਤ ਹੋ ਸਕਦੀ ਹੈ।\n\nਉਨ੍ਹਾਂ ਹਾਲਾਤਾਂ ਦੇ ਸਮਾਪਤ ਹੋਣ \'ਤੇ, ਤੁਹਾਡਾ ਟੈਬਲੈੱਟ ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਸਧਾਰਨ ਤਰੀਕੇ ਨਾਲ ਵਿੱਚ ਚਾਰਜ ਹੋ ਜਾਵੇਗਾ।"</string>
@@ -2736,6 +2735,7 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"ਇਹ ਐਪ ਬੈਕਗ੍ਰਾਊਂਡ ਵਿੱਚ ਬੈਟਰੀ ਦੀ ਵਰਤੋਂ ਕਰ ਸਕੇਗੀ। ਤੁਹਾਡੀ ਬੈਟਰੀ ਉਮੀਦ ਨਾਲੋਂ ਛੇਤੀ ਹੀ ਖਤਮ ਹੋ ਸਕਦੀ ਹੈ।"</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"ਹਟਾਓ"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"ਰੱਦ ਕਰੋ"</string>
+    <string name="battery_tip_charge_to_full_button" msgid="6701709034348116261">"ਪੂਰਾ ਚਾਰਜ ਕਰੋ"</string>
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"ਤੁਹਾਡੀਆਂ ਐਪਾਂ ਆਮ ਵਾਂਗ ਬੈਟਰੀ ਵਰਤ ਰਹੀਆਂ ਹਨ। ਐਪਾਂ ਵੱਲੋਂ ਭਾਰੀ ਮਾਤਰਾ ਵਿੱਚ ਬੈਟਰੀ ਦੀ ਵਰਤੋਂ ਕਰਨ \'ਤੇ ਤੁਹਾਡਾ ਫ਼ੋਨ ਤੁਹਾਨੂੰ ਕਾਰਵਾਈਆਂ ਕਰਨ ਦੇ ਸੁਝਾਅ ਦੇਵੇਗਾ।\n\nਬੈਟਰੀ ਘੱਟ ਹੋਣ \'ਤੇ ਤੁਸੀਂ ਹਮੇਸ਼ਾਂ \'ਬੈਟਰੀ ਸੇਵਰ\' ਨੂੰ ਚਾਲੂ ਕਰ ਸਕਦੇ ਹੋ।"</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"ਤੁਹਾਡੀਆਂ ਐਪਾਂ ਆਮ ਵਾਂਗ ਬੈਟਰੀ ਵਰਤ ਰਹੀਆਂ ਹਨ। ਐਪਾਂ ਵੱਲੋਂ ਭਾਰੀ ਮਾਤਰਾ ਵਿੱਚ ਬੈਟਰੀ ਦੀ ਵਰਤੋਂ ਕਰਨ \'ਤੇ ਤੁਹਾਡਾ ਟੈਬਲੈੱਟ ਤੁਹਾਨੂੰ ਕਾਰਵਾਈਆਂ ਕਰਨ ਦੇ ਸੁਝਾਅ ਦੇਵੇਗਾ।\n\nਬੈਟਰੀ ਘੱਟ ਹੋਣ \'ਤੇ ਤੁਸੀਂ ਹਮੇਸ਼ਾਂ \'ਬੈਟਰੀ ਸੇਵਰ\' ਨੂੰ ਚਾਲੂ ਕਰ ਸਕਦੇ ਹੋ।"</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"ਤੁਹਾਡੀਆਂ ਐਪਾਂ ਆਮ ਵਾਂਗ ਬੈਟਰੀ ਵਰਤ ਰਹੀਆਂ ਹਨ। ਐਪਾਂ ਵੱਲੋਂ ਭਾਰੀ ਮਾਤਰਾ ਵਿੱਚ ਬੈਟਰੀ ਦੀ ਵਰਤੋਂ ਕਰਨ \'ਤੇ ਤੁਹਾਡਾ ਡੀਵਾਈਸ ਤੁਹਾਨੂੰ ਕਾਰਵਾਈਆਂ ਕਰਨ ਦੇ ਸੁਝਾਅ ਦੇਵੇਗਾ।\n\nਬੈਟਰੀ ਘੱਟ ਹੋਣ \'ਤੇ ਤੁਸੀਂ ਹਮੇਸ਼ਾਂ \'ਬੈਟਰੀ ਸੇਵਰ\' ਨੂੰ ਚਾਲੂ ਕਰ ਸਕਦੇ ਹੋ।"</string>
@@ -2780,7 +2780,6 @@
     <string name="battery_full_charge_last" msgid="465146408601016923">"ਪੂਰਾ ਚਾਰਜ ਕਰਨ \'ਤੇ ਚੱਲਣ ਦਾ ਲਗਭਗ ਸਮਾਂ"</string>
     <string name="battery_footer_summary" msgid="8221691063048377342">"ਬੈਟਰੀ ਵਰਤੋਂ ਸੰਬੰਧੀ ਡਾਟਾ ਅੰਦਾਜ਼ਨ ਹੈ ਅਤੇ ਵਰਤੋਂ ਦੇ ਆਧਾਰ \'ਤੇ ਬਦਲ ਸਕਦਾ ਹੈ।"</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"ਬੈਟਰੀ ਵਰਤੋਂ"</string>
-    <string name="battery_detail_manage_title" msgid="7910805419446927887">"ਬੈਟਰੀ ਵਰਤੋਂ ਦਾ ਪ੍ਰਬੰਧਨ ਕਰੋ"</string>
     <string name="battery_total_and_bg_usage" msgid="8266478675516886819">"ਪਿਛਲੀ ਵਾਰ ਪੂਰਾ ਚਾਰਜ ਕਰਨ ਤੋਂ ਬਾਅਦ \n ਕੁੱਲ ਵਰਤੋਂ <xliff:g id="TIME_0">^1</xliff:g> • ਬੈਕਗ੍ਰਾਊਂਡ ਵਿੱਚ <xliff:g id="TIME_1">^2</xliff:g>"</string>
     <string name="battery_total_and_bg_usage_24hr" msgid="2393832614028187281">"ਪਿਛਲੇ 24 ਘੰਟਿਆਂ ਦੌਰਾਨ \nਕੁੱਲ ਵਰਤੋਂ <xliff:g id="TIME_0">^1</xliff:g> • ਬੈਕਗ੍ਰਾਊਂਡ ਵਿੱਚ <xliff:g id="TIME_1">^2</xliff:g>"</string>
     <string name="battery_total_and_bg_usage_with_period" msgid="2809037516933951047">"<xliff:g id="TIME_0">^1</xliff:g> ਕੁੱਲ • <xliff:g id="TIME_PERIOD">^3</xliff:g> ਦੌਰਾਨ\n ਤੱਕ ਬੈਕਗ੍ਰਾਊਂਡ<xliff:g id="TIME_1">^2</xliff:g> ਵਿੱਚ ਬੈਟਰੀ ਦੀ ਵਰਤੋਂ ਹੋਈ"</string>
@@ -2849,6 +2848,8 @@
     <string name="battery_usage_screen_footer" msgid="7899907241146636817">"ਬੈਟਰੀ ਵਰਤੋਂ ਸੰਬੰਧੀ ਡਾਟਾ ਅੰਦਾਜ਼ਨ ਹੈ ਅਤੇ ਫ਼ੋਨ ਚਾਰਜ ਹੋਣ ਵੇਲੇ ਵਰਤੋਂ ਨੂੰ ਨਹੀਂ ਮਾਪਿਆ ਜਾਂਦਾ ਹੈ"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"ਬੈਟਰੀ ਵਰਤੋਂ ਡਾਟਾ ਤੁਹਾਡੇ ਵੱਲੋਂ ਤੁਹਾਡੇ ਫ਼ੋਨ ਨੂੰ ਕੁਝ ਘੰਟਿਆਂ ਤੱਕ ਵਰਤੇ ਜਾਣ ਤੋਂ ਬਾਅਦ ਹੀ ਉਪਲਬਧ ਹੋਵੇਗਾ"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"ਬੈਟਰੀ ਵਰਤੋਂ ਦਾ ਚਾਰਟ"</string>
+    <string name="daily_battery_usage_chart" msgid="4176059567682992686">"ਰੋਜ਼ਾਨਾ ਬੈਟਰੀ ਵਰਤੋਂ ਚਾਰਟ"</string>
+    <string name="hourly_battery_usage_chart" msgid="3098314511076561272">"ਪ੍ਰਤੀ ਘੰਟਾ ਬੈਟਰੀ ਵਰਤੋਂ ਚਾਰਟ"</string>
     <string name="process_stats_summary_title" msgid="502683176231281732">"ਪ੍ਰਕਿਰਿਆ ਸਟੈਟਸ"</string>
     <string name="process_stats_summary" msgid="522842188571764699">"ਚੱਲ ਰਹੀਆਂ ਪ੍ਰਕਿਰਿਆਵਾਂ ਬਾਰੇ Geeky ਸਟੈਟਸ"</string>
     <string name="app_memory_use" msgid="7559666138324410666">"ਮੈਮਰੀ ਵਰਤੋਂ"</string>
@@ -3730,7 +3731,7 @@
     <string name="asst_importance_reset_summary" msgid="684794589254282667">"ਵਰਤੋਂਕਾਰਾਂ ਵੱਲੋਂ ਬਦਲੀਆਂ ਗਈਆਂ ਮਹੱਤਤਾ ਵਾਲੀਆਂ ਸੈਟਿੰਗਾਂ ਨੂੰ ਰੀਸੈੱਟ ਕਰੋ ਅਤੇ ਸੂਚਨਾ ਸਹਾਇਕ ਨੂੰ ਤਰਜੀਹ ਦੇਣ ਦੀ ਇਜਾਜ਼ਤ ਦਿਓ"</string>
     <string name="asst_capabilities_actions_replies_title" msgid="4392470465646394289">"ਸੁਝਾਈਆਂ ਗਈਆਂ ਕਾਰਵਾਈਆਂ ਅਤੇ ਜਵਾਬ"</string>
     <string name="asst_capabilities_actions_replies_summary" msgid="416234323365645871">"ਸਵੈਚਲਿਤ ਤੌਰ \'ਤੇ ਸੁਝਾਈਆਂ ਗਈਆਂ ਕਾਰਵਾਈਆਂ ਅਤੇ ਜਵਾਬਾਂ ਨੂੰ ਦਿਖਾਓ"</string>
-    <string name="notification_history_summary" msgid="5434741516307706892">"ਹਾਲੀਆਂ ਅਤੇ ਸਨੂਜ਼ ਕੀਤੀਆਂ ਸੂਚਨਾਵਾਂ ਦਿਖਾਓ"</string>
+    <string name="notification_history_summary" msgid="5434741516307706892">"ਹਾਲੀਆ ਅਤੇ ਸਨੂਜ਼ ਕੀਤੀਆਂ ਸੂਚਨਾਵਾਂ ਦਿਖਾਓ"</string>
     <string name="notification_history" msgid="8663811361243456201">"ਸੂਚਨਾ ਇਤਿਹਾਸ"</string>
     <string name="notification_history_toggle" msgid="9093762294928569030">"ਸੂਚਨਾ ਇਤਿਹਾਸ ਵਰਤੋ"</string>
     <string name="notification_history_off_title_extended" msgid="853807652537281601">"ਸੂਚਨਾ ਇਤਿਹਾਸ ਬੰਦ ਹੈ"</string>
@@ -4673,8 +4674,8 @@
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"ਹੁਣੇ ਚਾਲੂ ਕਰੋ"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"ਹੁਣੇ ਬੰਦ ਕਰੋ"</string>
     <string name="not_battery_optimizing" msgid="8361294470943376258">"ਬੈਟਰੀ ਔਪਟੀਮਾਈਜੇਸ਼ਨ ਦੀ ਵਰਤੋਂ ਨਹੀਂ ਕੀਤੀ ਜਾ ਰਹੀ"</string>
-    <string name="app_battery_optimization_title" msgid="389653121998016466">"ਬੈਟਰੀ ਵਰਤੋਂ ਦਾ ਪ੍ਰਬੰਧਨ ਕਰੋ"</string>
-    <string name="app_battery_optimization_summary" msgid="7864783556193427398">"ਐਪਾਂ ਲਈ ਬੈਟਰੀ ਵਰਤੋਂ ਸੈੱਟ ਕਰੋ"</string>
+    <string name="app_battery_usage_title" msgid="346558380609793334">"ਐਪ ਬੈਟਰੀ ਵਰਤੋਂ"</string>
+    <string name="app_battery_usage_summary" msgid="6349965904306339539">"ਐਪਾਂ ਲਈ ਬੈਟਰੀ ਵਰਤੋਂ ਸੈੱਟ ਕਰੋ"</string>
     <string name="filter_battery_unrestricted_title" msgid="821027369424198223">"ਅਣ-ਪ੍ਰਤਿਬੰਧਿਤ"</string>
     <string name="filter_battery_optimized_title" msgid="8236647176487754796">"ਸੁਯੋਗ ਬਣਾਈ ਗਈ"</string>
     <string name="filter_battery_restricted_title" msgid="5886859505802563232">"ਪ੍ਰਤਿਬੰਧਿਤ"</string>
@@ -5411,6 +5412,10 @@
     <string name="media_controls_title" msgid="403271085636252597">"ਮੀਡੀਆ"</string>
     <string name="media_controls_resume_title" msgid="855076860336652370">"ਮੀਡੀਆ ਪਲੇਅਰ ਨੂੰ ਪਿੰਨ ਕਰੋ"</string>
     <string name="media_controls_resume_description" msgid="3163482266454802097">"ਪਲੇਬੈਕ ਨੂੰ ਤੁਰੰਤ ਮੁੜ-ਚਾਲੂ ਕਰਨ ਲਈ, ਤਤਕਾਲ ਸੈਟਿੰਗਾਂ ਵਿੱਚ ਮੀਡੀਆ ਪਲੇਅਰ ਖੁੱਲ੍ਹਾ ਰਹਿੰਦਾ ਹੈ"</string>
+    <!-- no translation found for media_controls_lockscreen_title (2188311721857512510) -->
+    <skip />
+    <!-- no translation found for media_controls_lockscreen_description (3320333660404439510) -->
+    <skip />
     <string name="media_controls_recommendations_title" msgid="184225835236807677">"ਮੀਡੀਆ ਸਿਫ਼ਾਰਸ਼ਾਂ ਦਿਖਾਓ"</string>
     <string name="media_controls_recommendations_description" msgid="7596498733126824030">"ਤੁਹਾਡੀ ਸਰਗਰਮੀ ਦੇ ਆਧਾਰ \'ਤੇ"</string>
     <string name="media_controls_hide_player" msgid="2751439192580884015">"ਪਲੇਅਰ ਲੁਕਾਓ"</string>
